Fixed languages of example

--- a/example/lib/languages/ar.json
+++ b/example/lib/languages/ar.json
@@ -1,145 +1,213 @@
 {
-    "dir": "rtl",
-    "example.params": "اسمي {name}، وعمري {age}",
-    "example.path": "اختبار مسار example.path للتعريب",
-    "example.tstring": "اختبار كائنات TString لتعريب النصوص",
-    "logo": "تطبيق الويب",
-    "logo.title": "تطبيق الويب",
-    "pages.title": "العنوان",
-    "welcome.message": "مرحبًا بك في",
-    "features.title": "ميزات تطبيق الويب",
-    "features.description": "يوفر لك تطبيق الويب كل ما تحتاجه لبناء تطبيق ويب قوي بأبسط طريقة ممكنة باستخدام لغة Dart. يشمل هذا الأداة مجموعة من الميزات لإنشاء تطبيق ويب سريع، خفيف الوزن، وقوي. إليك بعض الميزات التي يقدمها:",
-    "features.websocket": "WebSocket",
-    "features.mongodb": "MongoDB",
-    "features.cronjobs": "الوظائف المجدولة",
-    "features.routing": "التوجيه",
-    "features.formvalidators": "مدققات النماذج",
-    "features.htmltools": "أدوات لتطوير صفحات HTML بسرعة",
-    "features.dbmodel": "إنشاء نموذج قاعدة البيانات",
-    "features.fastapi": "تطوير API سريع مع وثائق OpenAPI",
-    "features.other": "والعديد من الميزات الأخرى التي سنستكشفها في الأمثلة.",
-    "login.success": "تم تسجيل الدخول بنجاح",
-    "auth.test": "اختبار المصادقة",
-    "auth.welcome": "مرحبًا,",
-    "auth.logout": "تسجيل الخروج",
-    "auth.routeExample": "مثال على مسار يتطلب المصادقة",
-    "auth.logoutRoute": "مثال على مسار تسجيل الخروج",
-    "cookies.test": "اختبار الكوكيز",
-    "cookies.key": "المفتاح",
-    "cookies.value": "القيمة",
-    "cookies.action": "الإجراء",
-    "cookies.placeholder.name": "اسم الكوكي",
-    "cookies.placeholder.value": "قيمة الكوكي",
-    "cookies.safe": "آمن",
-    "cookies.add": "إضافة",
-    "cookies.remove": "إزالة الكوكي",
-    "cookies.addCookie": "إضافة كوكي",
-    "auth.view": "عرض",
-    "auth.controller": "التحكم",
-    "auth.authController": "وحدة التحكم في المصادقة",
-    "auth.router": "الموجه",
-    "email.test": "اختبار البريد الإلكتروني",
-    "email.from": "من",
-    "email.fromName": "اسمك",
-    "email.to": "إلى",
-    "email.subject": "الموضوع",
-    "email.message": "الرسالة",
-    "email.host": "المضيف",
-    "email.port": "المنفذ",
-    "email.username": "اسم المستخدم",
-    "email.password": "كلمة المرور",
-    "email.allowInsecure": "السماح بالاتصالات غير الآمنة",
-    "email.ssl": "SSL",
-    "email.success": "تم إرسال البريد الإلكتروني بنجاح!",
-    "email.failed": "فشل في إرسال البريد الإلكتروني.",
-    "email.send": "إرسال البريد الإلكتروني",
-    "email.placeholder.name": "أدخل اسمك",
-    "email.placeholder.to": "أدخل عنوان البريد الإلكتروني للمستلم",
-    "email.placeholder.subject": "أدخل الموضوع",
-    "email.placeholder.message": "أدخل الرسالة",
-    "email.placeholder.host": "أدخل اسم المضيف",
-    "email.placeholder.port": "أدخل رقم المنفذ",
-    "email.placeholder.username": "أدخل اسم المستخدم",
-    "email.placeholder.password": "أدخل كلمة المرور",
-    "form.validation.title": "اختبار التحقق من النموذج",
-    "form.validation.credentials.email": "البريد الإلكتروني",
-    "form.validation.credentials.password": "كلمة المرور",
-    "form.validation.email": "عنوان البريد الإلكتروني",
-    "form.validation.emailPlaceholder": "أدخل بريدك الإلكتروني",
-    "form.validation.password": "كلمة المرور",
-    "form.validation.passwordPlaceholder": "أدخل كلمة مرورك",
-    "form.validation.login": "تسجيل الدخول",
-    "form.validation.loginError": "خطأ في تسجيل الدخول",
-    "form.validation.loginSuccess": "تسجيل الدخول ناجح! مرحبًا بك",
-    "form.validation.logout": "تسجيل الخروج",
-    "form.validation.view": "عرض",
-    "form.validation.controller": "التحكم",
-    "i18n.title": "اختبار اللغة (i18n)",
-    "i18n.language.english": "الإنجليزية",
-    "i18n.language.persian": "الفارسية",
-    "i18n.language.dutch": "الهولندية",
-    "i18n.exampleTString": "مثال TString",
-    "i18n.examplePath": "مثال على المسار",
-    "i18n.examplePathString": "مثال على مسار النص",
-    "i18n.exampleParams": "مرحبًا، اسمي {name} وعمري {age} عامًا.",
-    "i18n.view": "عرض",
-    "i18n.controller": "التحكم",
-    "i18n.languagesDirectory": "دليل اللغات",
-    "webappInfo.title": "معلومات تطبيق الويب",
-    "webappInfo.key": "{key}",
-    "webappInfo.info": "{info}",
-    "webappInfo.details": "{details}",
-    "webRouteExample.title": "مثال على مسار الويب",
-    "webRouteExample.path": "المسار",
-    "webRouteExample.type": "النوع",
-    "webRouteExample.permissions": "الأذونات",
-    "webRouteExample.auth": "المصادقة",
-    "webRouteExample.controller": "التحكم",
-    "webRouteExample.router": "الموجه",
-    "testWebSocket.title": "اختبار WebSocket",
-    "testWebSocket.output": "المخرجات",
-    "testWebSocket.getTime": "احصل على الوقت",
-    "testWebSocket.randomMessage": "رسالة عشوائية",
-    "testWebSocket.clientLists": "قائمة العملاء",
-    "testWebSocket.clear": "مسح",
-    "navbar.toggleSidebar": "تبديل الشريط الجانبي",
-    "navbar.toggleNavigation": "تبديل التنقل",
-    "languages.english": "الإنجليزية",
-    "languages.persian": "الفارسية",
-    "languages.dutch": "الهولندية",
-    "sidebar.home": "الصفحة الرئيسية",
-    "sidebar.info": "المعلومات",
-    "sidebar.formExample": "مثال على النموذج",
-    "sidebar.cookieExample": "مثال على الكوكي",
-    "sidebar.routeExample": "مثال على المسار",
-    "sidebar.socketExample": "مثال على Web Socket",
-    "sidebar.emailExample": "مثال على البريد الإلكتروني",
-    "sidebar.authExample": "مثال على المصادقة",
-    "sidebar.languageExample": "مثال على اللغة (i18n)",
-    "sidebar.debugExample": "مثال على التصحيح",
-    "sidebar.errorExample": "الخطأ",
-    "sidebar.dumpExample": "تفريغ المتغيرات",
-    "sidebar.monogdbExample": "مثال على MongoDB",
-    "database.test.title": "اختبار قاعدة البيانات (Mongo db)",
-    "database.table.header.title": "العنوان",
-    "database.table.header.slug": "الاسم المستعار",
-    "database.table.header.action": "الإجراء",
-    "database.table.input.placeholder.title": "أدخل العنوان",
-    "database.table.button.add": "إضافة",
-    "pagination.showing": "عرض",
-    "pagination.to": "إلى",
-    "pagination.of": "من",
-    "pagination.entries": "مدخلات",
-    "sidebar.paginationExample": "مثال على الترقيم",
-    "project.contributing": "المساهمة",
-    "project.documentation": "التوثيق",
-    "project.github": "GitHub",
-    "error.field.required": "هذا الحقل مطلوب",
-    "error.field.email": "عنوان البريد الإلكتروني غير صالح",
-    "error.field": "قيمة غير صالحة",
-    "error.field.min": "يجب أن تكون القيمة أكبر من أو تساوي {0}",
-    "error.field.max": "يجب أن تكون القيمة أقل من أو تساوي {0}",
-    "error.invalid.password": "كلمة المرور غير صالحة، يجب أن تحتوي على [رقم/حروف (كبيرة وصغيرة)/؟@",
-    "testWebSocket.stream": "Video Stream",
-    "testWebSocket.stopStream": "Stop"
+  "dir": "rtl",
+  "example.params": "اسمي هو {name}، عمري هو {age}",
+  "example.path": "مسار اختبار example.path للترجمة المحلية",
+  "example.tstring": "اختبار كائنات TString للـ i18n",
+  "logo": "WebApp",
+  "logo.title": "WebApp",
+  "pages.title": "العنوان",
+  "welcome.message": "مرحبا بك في",
+  "features.title": "ميزات WebApp",
+  "features.description": "يوفر لك WebApp كل ما تحتاجه لبناء تطبيق ويب قوي بأبسط طريقة ممكنة باستخدام لغة Dart. تتضمن هذه الأداة مجموعة من الميزات لإنشاء تطبيق ويب سريع وخفيف وقوي. إليك بعض الميزات التي يقدمها:",
+  "features.websocket": "WebSocket",
+  "features.mongodb": "MongoDB",
+  "features.cronjobs": "مهام Cron",
+  "features.routing": "التوجيه",
+  "features.formvalidators": "مدققات النماذج",
+  "features.htmltools": "أدوات لتطوير صفحات HTML بسرعة",
+  "features.dbmodel": "إنشاء نموذج قاعدة البيانات",
+  "features.fastapi": "تطوير API سريع مع توثيق OpenAPI",
+  "features.other": "والعديد من الميزات الأخرى التي سنستكشفها في الأمثلة.",
+  "login.success": "تم تسجيل الدخول بنجاح",
+  "auth.test": "اختبار المصادقة",
+  "auth.welcome": "مرحباً،",
+  "auth.logout": "تسجيل الخروج",
+  "auth.routeExample": "مثال لمسار يتطلب المصادقة",
+  "auth.logoutRoute": "مثال لمسار تسجيل الخروج",
+  "cookies.test": "اختبار ملفات تعريف الارتباط",
+  "cookies.key": "المفتاح",
+  "cookies.value": "القيمة",
+  "cookies.action": "الإجراء",
+  "cookies.placeholder.name": "اسم ملف تعريف الارتباط",
+  "cookies.placeholder.value": "قيمة ملف تعريف الارتباط",
+  "cookies.safe": "آمن",
+  "cookies.add": "إضافة",
+  "cookies.remove": "إزالة ملف تعريف الارتباط",
+  "cookies.addCookie": "إضافة ملف تعريف الارتباط",
+  "auth.view": "عرض",
+  "auth.controller": "المتحكم",
+  "auth.authController": "متحكم المصادقة",
+  "auth.router": "الموجه",
+  "email.test": "اختبار البريد الإلكتروني",
+  "email.from": "من",
+  "email.fromName": "اسمك",
+  "email.to": "إلى",
+  "email.subject": "الموضوع",
+  "email.message": "الرسالة",
+  "email.host": "المضيف",
+  "email.port": "المنفذ",
+  "email.username": "اسم المستخدم",
+  "email.password": "كلمة المرور",
+  "email.allowInsecure": "السماح بغير آمن",
+  "email.ssl": "SSL",
+  "email.success": "تم إرسال البريد الإلكتروني بنجاح!",
+  "email.failed": "فشل في إرسال البريد الإلكتروني.",
+  "email.send": "إرسال البريد الإلكتروني",
+  "email.placeholder.name": "أدخل اسمك",
+  "email.placeholder.to": "أدخل عنوان البريد الإلكتروني للمستلم",
+  "email.placeholder.subject": "أدخل الموضوع",
+  "email.placeholder.message": "أدخل الرسالة",
+  "email.placeholder.host": "أدخل اسم المضيف",
+  "email.placeholder.port": "أدخل رقم المنفذ",
+  "email.placeholder.username": "أدخل اسم المستخدم",
+  "email.placeholder.password": "أدخل كلمة المرور",
+  "form.validation.title": "اختبار التحقق من صحة النموذج",
+  "form.validation.credentials.email": "البريد الإلكتروني",
+  "form.validation.credentials.password": "كلمة المرور",
+  "form.validation.email": "عنوان البريد الإلكتروني",
+  "form.validation.emailPlaceholder": "أدخل بريدك الإلكتروني",
+  "form.validation.password": "كلمة المرور",
+  "form.validation.passwordPlaceholder": "أدخل كلمة المرور الخاصة بك",
+  "form.validation.login": "تسجيل الدخول",
+  "form.validation.loginError": "خطأ في تسجيل الدخول",
+  "form.validation.loginSuccess": "تم تسجيل الدخول بنجاح! مرحباً",
+  "form.validation.logout": "تسجيل الخروج",
+  "form.validation.view": "عرض",
+  "form.validation.controller": "المتحكم",
+  "i18n.title": "اختبار اللغة (i18n)",
+  "i18n.language.english": "الإنجليزية",
+  "i18n.language.persian": "الفارسية",
+  "i18n.language.dutch": "الهولندية",
+  "i18n.exampleTString": "مثال TString",
+  "i18n.examplePath": "مثال المسار",
+  "i18n.examplePathString": "مثال سلسلة المسار",
+  "i18n.exampleParams": "مرحباً، اسمي {name} وعمري {age} سنة.",
+  "i18n.view": "عرض",
+  "i18n.controller": "المتحكم",
+  "i18n.languagesDirectory": "دليل اللغات",
+  "webappInfo.title": "معلومات WebApp",
+  "webappInfo.key": "{key}",
+  "webappInfo.info": "{info}",
+  "webappInfo.details": "{details}",
+  "webRouteExample.title": "مثال مسار الويب",
+  "webRouteExample.path": "المسار",
+  "webRouteExample.type": "النوع",
+  "webRouteExample.permissions": "الأذونات",
+  "webRouteExample.auth": "المصادقة",
+  "webRouteExample.controller": "المتحكم",
+  "webRouteExample.router": "الموجه",
+  "testWebSocket.title": "اختبار WebSocket",
+  "testWebSocket.output": "المخرجات",
+  "testWebSocket.getTime": "الحصول على الوقت",
+  "testWebSocket.randomMessage": "رسالة عشوائية",
+  "testWebSocket.clientLists": "قوائم العملاء",
+  "testWebSocket.clear": "مسح",
+  "navbar.toggleSidebar": "تبديل الشريط الجانبي",
+  "navbar.toggleNavigation": "تبديل التنقل",
+  "languages.english": "الإنجليزية",
+  "languages.persian": "الفارسية",
+  "languages.dutch": "الهولندية",
+  "sidebar.home": "الرئيسية",
+  "sidebar.info": "معلومات",
+  "sidebar.formExample": "مثال النموذج",
+  "sidebar.cookieExample": "مثال ملف تعريف الارتباط",
+  "sidebar.routeExample": "مثال المسار",
+  "sidebar.socketExample": "مثال Web Socket",
+  "sidebar.emailExample": "مثال البريد الإلكتروني",
+  "sidebar.authExample": "مثال المصادقة",
+  "sidebar.languageExample": "مثال اللغة (i18n)",
+  "sidebar.debugExample": "مثال التصحيح",
+  "sidebar.errorExample": "خطأ",
+  "sidebar.dumpExample": "تفريغ المتغيرات",
+  "sidebar.monogdbExample": "مثال MongoDB",
+  "database.test.title": "اختبار قاعدة البيانات (MongoDB)",
+  "database.table.header.title": "العنوان",
+  "database.table.header.slug": "الاسم المختصر",
+  "database.table.header.action": "الإجراء",
+  "database.table.input.placeholder.title": "أدخل العنوان",
+  "database.table.button.add": "إضافة",
+  "pagination.showing": "عرض",
+  "pagination.to": "إلى",
+  "pagination.of": "من",
+  "pagination.entries": "المدخلات",
+  "sidebar.paginationExample": "مثال الترقيم",
+  "project.contributing": "المساهمة",
+  "project.documentation": "التوثيق",
+  "project.github": "GitHub",
+  "error.field.required": "هذا الحقل مطلوب",
+  "error.field.email": "عنوان البريد الإلكتروني غير صالح",
+  "error.field": "قيمة خاطئة",
+  "error.field.min": "يجب أن تكون القيمة أكبر من أو تساوي {0}",
+  "error.field.max": "يجب أن تكون القيمة أقل من أو تساوي {0}",
+  "error.invalid.password": "كلمة المرور غير صالحة، يجب أن تحتوي على [رقم/حرف(كبير+صغير)/?@",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "testWebSocket.stream": "بث الفيديو",
+  "testWebSocket.stopStream": "إيقاف",
+  "error.field.relation": "قيمة هذا الحقل غير صالحة",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "مثال MySQL",
+  "mysql.table.header.id": "المعرف",
+  "mysql.table.header.title": "العنوان",
+  "mysql.table.header.author": "المؤلف",
+  "mysql.table.header.publishedDate": "تاريخ النشر",
+  "mysql.table.header.categoryId": "معرف الفئة",
+  "mysql.table.header.actions": "الإجراءات",
+  "mysql.table.header.booksCount": "عدد الكتب",
+  "mysql.placeholder.id": "المعرف",
+  "mysql.placeholder.title": "العنوان",
+  "mysql.placeholder.author": "المؤلف",
+  "mysql.placeholder.publishedDate": "تاريخ النشر",
+  "mysql.filter.allCategories": "جميع الفئات",
+  "mysql.button.deleteSelected": "حذف المحدد",
+  "mysql.button.update": "تحديث",
+  "mysql.button.reset": "إعادة تعيين",
+  "mysql.button.filter": "تصفية",
+  "mysql.button.delete": "حذف",
+  "mysql.button.edit": "تعديل",
+  "mysql.message.deleteSelectedBooks": "هل أنت متأكد أنك تريد حذف الكتب المحددة؟",
+  "mysql.message.noBooksSelected": "لم يتم تحديد كتب للحذف.",
+  "mysql.message.deleteBook": "هل أنت متأكد أنك تريد حذف هذا الكتاب؟",
+  "mysql.message.deleteCategory": "هل أنت متأكد أنك تريد حذف هذه الفئة؟",
+  "mysql.message.noRecords": "لم يتم العثور على سجلات",
+  "mysql.message.noCategories": "لم يتم العثور على فئات",
+  "mysql.categories.title": "فئات مثال MySQL",
+  "sidebar.mongo": "مثال MongoDB",
+  "person.example.title": "مثال الأشخاص",
+  "person.table.header.name": "الاسم",
+  "person.table.header.age": "العمر",
+  "person.table.header.married": "متزوج",
+  "person.table.header.email": "البريد الإلكتروني",
+  "person.table.header.height": "الطول",
+  "person.table.header.birthday": "تاريخ الميلاد",
+  "person.table.header.job": "الوظيفة",
+  "person.table.header.skills": "المهارات",
+  "person.table.header.action": "الإجراء",
+  "person.table.empty": "لم يتم العثور على أشخاص.",
+  "database.table.empty": "لم يتم العثور على سجلات",
+  "person.form.label.name": "الاسم",
+  "person.form.placeholder.name": "أدخل اسمك",
+  "person.form.label.email": "البريد الإلكتروني",
+  "person.form.placeholder.email": "أدخل بريدك الإلكتروني",
+  "person.form.label.age": "العمر",
+  "person.form.placeholder.age": "أدخل عمرك",
+  "person.form.label.birthday": "تاريخ الميلاد",
+  "person.form.label.height": "الطول",
+  "person.form.placeholder.height": "أدخل طولك",
+  "person.form.label.job_title": "المسمى الوظيفي",
+  "person.form.option.select_job": "اختر الوظيفة",
+  "person.form.label.skills": "المهارات",
+  "person.form.label.password": "كلمة المرور",
+  "person.form.placeholder.password": "أدخل كلمة المرور",
+  "person.form.label.gender": "الجنس",
+  "person.form.gender.dont_ask": "لا تسأل!",
+  "person.form.gender.male": "ذكر",
+  "person.form.gender.female": "أنثى",
+  "person.form.gender.other": "آخر",
+  "person.form.label.married": "متزوج",
+  "person.form.married.yes": "نعم",
+  "person.form.married.no": "لا",
+  "person.form.label.color": "اللون",
+  "person.form.tooltip.color": "اختر لونك",
+  "person.form.button.submit": "إرسال",
+  "person.form.button.cancel": "إلغاء"
 }
