--- a/example/lib/languages/de.json
+++ b/example/lib/languages/de.json
@@ -1,145 +1,213 @@
 {
-    "dir": "ltr",
-    "example.params": "Mein Name ist {name}, mein Alter ist {age}",
-    "example.path": "Testpfad von example.path für Lokalisierung",
-    "example.tstring": "Test TString-Objekte für die Internationalisierung",
-    "logo": "WebApp",
-    "logo.title": "WebApp",
-    "pages.title": "Titel",
-    "welcome.message": "Willkommen bei",
-    "features.title": "WebApp Funktionen",
-    "features.description": "WebApp bietet dir alles, was du brauchst, um eine leistungsstarke Webanwendung auf die einfachste Art und Weise mit der Dart-Sprache zu erstellen. Dieses Tool umfasst eine Reihe von Funktionen zur Erstellung einer schnellen, leichten und robusten Web-App. Hier sind einige der Funktionen, die es bietet:",
-    "features.websocket": "WebSocket",
-    "features.mongodb": "MongoDB",
-    "features.cronjobs": "Cron-Jobs",
-    "features.routing": "Routing",
-    "features.formvalidators": "Formularvalidatoren",
-    "features.htmltools": "Tools für die schnelle Entwicklung von HTML-Seiten",
-    "features.dbmodel": "Erstellung eines Datenbankmodells",
-    "features.fastapi": "Schnelle API-Entwicklung mit OpenAPI-Dokumentation",
-    "features.other": "Und viele andere Funktionen, die wir in den Beispielen erkunden werden.",
-    "login.success": "Anmeldung erfolgreich",
-    "auth.test": "Authentifizierung testen",
-    "auth.welcome": "Willkommen,",
-    "auth.logout": "Abmelden",
-    "auth.routeExample": "Beispiel einer Route, die Authentifizierung erfordert",
-    "auth.logoutRoute": "Beispiel einer Abmelde-Route",
-    "cookies.test": "Cookies testen",
-    "cookies.key": "Schlüssel",
-    "cookies.value": "Wert",
-    "cookies.action": "Aktion",
-    "cookies.placeholder.name": "Cookie-Name",
-    "cookies.placeholder.value": "Cookie-Wert",
-    "cookies.safe": "Sicher",
-    "cookies.add": "Hinzufügen",
-    "cookies.remove": "Cookie entfernen",
-    "cookies.addCookie": "Cookie hinzufügen",
-    "auth.view": "Anzeigen",
-    "auth.controller": "Controller",
-    "auth.authController": "Authentifizierungs-Controller",
-    "auth.router": "Router",
-    "email.test": "E-Mail testen",
-    "email.from": "Von",
-    "email.fromName": "Dein Name",
-    "email.to": "An",
-    "email.subject": "Betreff",
-    "email.message": "Nachricht",
-    "email.host": "Host",
-    "email.port": "Port",
-    "email.username": "Benutzername",
-    "email.password": "Passwort",
-    "email.allowInsecure": "Unsicher zulassen",
-    "email.ssl": "SSL",
-    "email.success": "E-Mail erfolgreich gesendet!",
-    "email.failed": "E-Mail konnte nicht gesendet werden.",
-    "email.send": "E-Mail senden",
-    "email.placeholder.name": "Gib deinen Namen ein",
-    "email.placeholder.to": "Gib die E-Mail-Adresse des Empfängers ein",
-    "email.placeholder.subject": "Betreff eingeben",
-    "email.placeholder.message": "Nachricht eingeben",
-    "email.placeholder.host": "Hostnamen eingeben",
-    "email.placeholder.port": "Portnummer eingeben",
-    "email.placeholder.username": "Benutzername eingeben",
-    "email.placeholder.password": "Passwort eingeben",
-    "form.validation.title": "Formularvalidierung testen",
-    "form.validation.credentials.email": "E-Mail",
-    "form.validation.credentials.password": "Passwort",
-    "form.validation.email": "E-Mail-Adresse",
-    "form.validation.emailPlaceholder": "Gib deine E-Mail ein",
-    "form.validation.password": "Passwort",
-    "form.validation.passwordPlaceholder": "Gib dein Passwort ein",
-    "form.validation.login": "Anmelden",
-    "form.validation.loginError": "Anmeldefehler",
-    "form.validation.loginSuccess": "Anmeldung erfolgreich! Willkommen",
-    "form.validation.logout": "Abmelden",
-    "form.validation.view": "Anzeigen",
-    "form.validation.controller": "Controller",
-    "i18n.title": "Sprache testen (i18n)",
-    "i18n.language.english": "Englisch",
-    "i18n.language.persian": "Persisch",
-    "i18n.language.dutch": "Niederländisch",
-    "i18n.exampleTString": "Beispiel TString",
-    "i18n.examplePath": "Beispielpfad",
-    "i18n.examplePathString": "Beispiel Pfad-String",
-    "i18n.exampleParams": "Hallo, mein Name ist {name} und ich bin {age} Jahre alt.",
-    "i18n.view": "Anzeigen",
-    "i18n.controller": "Controller",
-    "i18n.languagesDirectory": "Sprachverzeichnis",
-    "webappInfo.title": "WebApp Info",
-    "webappInfo.key": "{key}",
-    "webappInfo.info": "{info}",
-    "webappInfo.details": "{details}",
-    "webRouteExample.title": "Beispiel einer Webroute",
-    "webRouteExample.path": "Pfad",
-    "webRouteExample.type": "Typ",
-    "webRouteExample.permissions": "Berechtigungen",
-    "webRouteExample.auth": "Authentifizierung",
-    "webRouteExample.controller": "Controller",
-    "webRouteExample.router": "Router",
-    "testWebSocket.title": "WebSocket testen",
-    "testWebSocket.output": "Ausgabe",
-    "testWebSocket.getTime": "Zeit abrufen",
-    "testWebSocket.randomMessage": "Zufallsnachricht",
-    "testWebSocket.clientLists": "Clientlisten",
-    "testWebSocket.clear": "Leeren",
-    "navbar.toggleSidebar": "Seitenleiste umschalten",
-    "navbar.toggleNavigation": "Navigation umschalten",
-    "languages.english": "Englisch",
-    "languages.persian": "Persisch",
-    "languages.dutch": "Niederländisch",
-    "sidebar.home": "Startseite",
-    "sidebar.info": "Info",
-    "sidebar.formExample": "Formularbeispiel",
-    "sidebar.cookieExample": "Cookie-Beispiel",
-    "sidebar.routeExample": "Routenbeispiel",
-    "sidebar.socketExample": "WebSocket-Beispiel",
-    "sidebar.emailExample": "E-Mail-Beispiel",
-    "sidebar.authExample": "Authentifizierungsbeispiel",
-    "sidebar.languageExample": "Sprachbeispiel (i18n)",
-    "sidebar.debugExample": "Debug-Beispiel",
-    "sidebar.errorExample": "Fehler",
-    "sidebar.dumpExample": "Variablen ausgeben",
-    "sidebar.monogdbExample": "MongoDB-Beispiel",
-    "database.test.title": "Datenbank testen (MongoDB)",
-    "database.table.header.title": "Titel",
-    "database.table.header.slug": "Slug",
-    "database.table.header.action": "Aktion",
-    "database.table.input.placeholder.title": "Titel eingeben",
-    "database.table.button.add": "Hinzufügen",
-    "pagination.showing": "Zeige",
-    "pagination.to": "bis",
-    "pagination.of": "von",
-    "pagination.entries": "Einträge",
-    "sidebar.paginationExample": "Paginierungsbeispiel",
-    "project.contributing": "Mitwirken",
-    "project.documentation": "Dokumentation",
-    "project.github": "GitHub",
-    "error.field.required": "Dieses Feld ist erforderlich",
-    "error.field.email": "Ungültige E-Mail-Adresse",
-    "error.field": "Ungültiger Wert",
-    "error.field.min": "Wert muss größer oder gleich {0} sein",
-    "error.field.max": "Wert muss kleiner oder gleich {0} sein",
-    "error.invalid.password": "Das Passwort ist ungültig, es muss [Zahl/Buchstabe (Groß+Klein)/?@ enthalten",
-    "testWebSocket.stream": "Video Stream",
-    "testWebSocket.stopStream": "Stop"
+  "dir": "ltr",
+  "example.params": "Mein Name ist {name}, mein Alter ist {age}",
+  "example.path": "Testpfad von example.path für Lokalisierung",
+  "example.tstring": "Test TString-Objekte für die Internationalisierung",
+  "logo": "WebApp",
+  "logo.title": "WebApp",
+  "pages.title": "Titel",
+  "welcome.message": "Willkommen bei",
+  "features.title": "WebApp Funktionen",
+  "features.description": "WebApp bietet dir alles, was du brauchst, um eine leistungsstarke Webanwendung auf die einfachste Art und Weise mit der Dart-Sprache zu erstellen. Dieses Tool umfasst eine Reihe von Funktionen zur Erstellung einer schnellen, leichten und robusten Web-App. Hier sind einige der Funktionen, die es bietet:",
+  "features.websocket": "WebSocket",
+  "features.mongodb": "MongoDB",
+  "features.cronjobs": "Cron-Jobs",
+  "features.routing": "Routing",
+  "features.formvalidators": "Formularvalidatoren",
+  "features.htmltools": "Tools für die schnelle Entwicklung von HTML-Seiten",
+  "features.dbmodel": "Erstellung eines Datenbankmodells",
+  "features.fastapi": "Schnelle API-Entwicklung mit OpenAPI-Dokumentation",
+  "features.other": "Und viele andere Funktionen, die wir in den Beispielen erkunden werden.",
+  "login.success": "Anmeldung erfolgreich",
+  "auth.test": "Authentifizierung testen",
+  "auth.welcome": "Willkommen,",
+  "auth.logout": "Abmelden",
+  "auth.routeExample": "Beispiel einer Route, die Authentifizierung erfordert",
+  "auth.logoutRoute": "Beispiel einer Abmelde-Route",
+  "cookies.test": "Cookies testen",
+  "cookies.key": "Schlüssel",
+  "cookies.value": "Wert",
+  "cookies.action": "Aktion",
+  "cookies.placeholder.name": "Cookie-Name",
+  "cookies.placeholder.value": "Cookie-Wert",
+  "cookies.safe": "Sicher",
+  "cookies.add": "Hinzufügen",
+  "cookies.remove": "Cookie entfernen",
+  "cookies.addCookie": "Cookie hinzufügen",
+  "auth.view": "Anzeigen",
+  "auth.controller": "Controller",
+  "auth.authController": "Authentifizierungs-Controller",
+  "auth.router": "Router",
+  "email.test": "E-Mail testen",
+  "email.from": "Von",
+  "email.fromName": "Dein Name",
+  "email.to": "An",
+  "email.subject": "Betreff",
+  "email.message": "Nachricht",
+  "email.host": "Host",
+  "email.port": "Port",
+  "email.username": "Benutzername",
+  "email.password": "Passwort",
+  "email.allowInsecure": "Unsicher zulassen",
+  "email.ssl": "SSL",
+  "email.success": "E-Mail erfolgreich gesendet!",
+  "email.failed": "E-Mail konnte nicht gesendet werden.",
+  "email.send": "E-Mail senden",
+  "email.placeholder.name": "Gib deinen Namen ein",
+  "email.placeholder.to": "Gib die E-Mail-Adresse des Empfängers ein",
+  "email.placeholder.subject": "Betreff eingeben",
+  "email.placeholder.message": "Nachricht eingeben",
+  "email.placeholder.host": "Hostnamen eingeben",
+  "email.placeholder.port": "Portnummer eingeben",
+  "email.placeholder.username": "Benutzername eingeben",
+  "email.placeholder.password": "Passwort eingeben",
+  "form.validation.title": "Formularvalidierung testen",
+  "form.validation.credentials.email": "E-Mail",
+  "form.validation.credentials.password": "Passwort",
+  "form.validation.email": "E-Mail-Adresse",
+  "form.validation.emailPlaceholder": "Gib deine E-Mail ein",
+  "form.validation.password": "Passwort",
+  "form.validation.passwordPlaceholder": "Gib dein Passwort ein",
+  "form.validation.login": "Anmelden",
+  "form.validation.loginError": "Anmeldefehler",
+  "form.validation.loginSuccess": "Anmeldung erfolgreich! Willkommen",
+  "form.validation.logout": "Abmelden",
+  "form.validation.view": "Anzeigen",
+  "form.validation.controller": "Controller",
+  "i18n.title": "Sprache testen (i18n)",
+  "i18n.language.english": "Englisch",
+  "i18n.language.persian": "Persisch",
+  "i18n.language.dutch": "Niederländisch",
+  "i18n.exampleTString": "Beispiel TString",
+  "i18n.examplePath": "Beispielpfad",
+  "i18n.examplePathString": "Beispiel Pfad-String",
+  "i18n.exampleParams": "Hallo, mein Name ist {name} und ich bin {age} Jahre alt.",
+  "i18n.view": "Anzeigen",
+  "i18n.controller": "Controller",
+  "i18n.languagesDirectory": "Sprachverzeichnis",
+  "webappInfo.title": "WebApp Info",
+  "webappInfo.key": "{key}",
+  "webappInfo.info": "{info}",
+  "webappInfo.details": "{details}",
+  "webRouteExample.title": "Beispiel einer Webroute",
+  "webRouteExample.path": "Pfad",
+  "webRouteExample.type": "Typ",
+  "webRouteExample.permissions": "Berechtigungen",
+  "webRouteExample.auth": "Authentifizierung",
+  "webRouteExample.controller": "Controller",
+  "webRouteExample.router": "Router",
+  "testWebSocket.title": "WebSocket testen",
+  "testWebSocket.output": "Ausgabe",
+  "testWebSocket.getTime": "Zeit abrufen",
+  "testWebSocket.randomMessage": "Zufallsnachricht",
+  "testWebSocket.clientLists": "Clientlisten",
+  "testWebSocket.clear": "Leeren",
+  "navbar.toggleSidebar": "Seitenleiste umschalten",
+  "navbar.toggleNavigation": "Navigation umschalten",
+  "languages.english": "Englisch",
+  "languages.persian": "Persisch",
+  "languages.dutch": "Niederländisch",
+  "sidebar.home": "Startseite",
+  "sidebar.info": "Info",
+  "sidebar.formExample": "Formularbeispiel",
+  "sidebar.cookieExample": "Cookie-Beispiel",
+  "sidebar.routeExample": "Routenbeispiel",
+  "sidebar.socketExample": "WebSocket-Beispiel",
+  "sidebar.emailExample": "E-Mail-Beispiel",
+  "sidebar.authExample": "Authentifizierungsbeispiel",
+  "sidebar.languageExample": "Sprachbeispiel (i18n)",
+  "sidebar.debugExample": "Debug-Beispiel",
+  "sidebar.errorExample": "Fehler",
+  "sidebar.dumpExample": "Variablen ausgeben",
+  "sidebar.monogdbExample": "MongoDB-Beispiel",
+  "database.test.title": "Datenbank testen (MongoDB)",
+  "database.table.header.title": "Titel",
+  "database.table.header.slug": "Slug",
+  "database.table.header.action": "Aktion",
+  "database.table.input.placeholder.title": "Titel eingeben",
+  "database.table.button.add": "Hinzufügen",
+  "pagination.showing": "Zeige",
+  "pagination.to": "bis",
+  "pagination.of": "von",
+  "pagination.entries": "Einträge",
+  "sidebar.paginationExample": "Paginierungsbeispiel",
+  "project.contributing": "Mitwirken",
+  "project.documentation": "Dokumentation",
+  "project.github": "GitHub",
+  "error.field.required": "Dieses Feld ist erforderlich",
+  "error.field.email": "Ungültige E-Mail-Adresse",
+  "error.field": "Ungültiger Wert",
+  "error.field.min": "Wert muss größer oder gleich {0} sein",
+  "error.field.max": "Wert muss kleiner oder gleich {0} sein",
+  "error.invalid.password": "Das Passwort ist ungültig, es muss [Zahl/Buchstabe (Groß+Klein)/?@ enthalten",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "testWebSocket.stream": "Videostream",
+  "testWebSocket.stopStream": "Stoppen",
+  "error.field.relation": "Der Wert dieses Feldes ist ungültig",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "MySQL Beispiel",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "Titel",
+  "mysql.table.header.author": "Autor",
+  "mysql.table.header.publishedDate": "Veröffentlichungsdatum",
+  "mysql.table.header.categoryId": "Kategorie-ID",
+  "mysql.table.header.actions": "Aktionen",
+  "mysql.table.header.booksCount": "Anzahl Bücher",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "Titel",
+  "mysql.placeholder.author": "Autor",
+  "mysql.placeholder.publishedDate": "Veröffentlichungsdatum",
+  "mysql.filter.allCategories": "Alle Kategorien",
+  "mysql.button.deleteSelected": "Ausgewählte löschen",
+  "mysql.button.update": "Aktualisieren",
+  "mysql.button.reset": "Zurücksetzen",
+  "mysql.button.filter": "Filtern",
+  "mysql.button.delete": "Löschen",
+  "mysql.button.edit": "Bearbeiten",
+  "mysql.message.deleteSelectedBooks": "Sind Sie sicher, dass Sie die ausgewählten Bücher löschen möchten?",
+  "mysql.message.noBooksSelected": "Keine Bücher zum Löschen ausgewählt.",
+  "mysql.message.deleteBook": "Sind Sie sicher, dass Sie dieses Buch löschen möchten?",
+  "mysql.message.deleteCategory": "Sind Sie sicher, dass Sie diese Kategorie löschen möchten?",
+  "mysql.message.noRecords": "Keine Datensätze gefunden",
+  "mysql.message.noCategories": "Keine Kategorien gefunden",
+  "mysql.categories.title": "MySQL Beispiel Kategorien",
+  "sidebar.mongo": "MongoDB Beispiel",
+  "person.example.title": "Personenbeispiel",
+  "person.table.header.name": "Name",
+  "person.table.header.age": "Alter",
+  "person.table.header.married": "Verheiratet",
+  "person.table.header.email": "E-Mail",
+  "person.table.header.height": "Größe",
+  "person.table.header.birthday": "Geburtstag",
+  "person.table.header.job": "Beruf",
+  "person.table.header.skills": "Fähigkeiten",
+  "person.table.header.action": "Aktion",
+  "person.table.empty": "Keine Personen gefunden.",
+  "database.table.empty": "Keine Datensätze gefunden",
+  "person.form.label.name": "Name",
+  "person.form.placeholder.name": "Geben Sie Ihren Namen ein",
+  "person.form.label.email": "E-Mail",
+  "person.form.placeholder.email": "Geben Sie Ihre E-Mail ein",
+  "person.form.label.age": "Alter",
+  "person.form.placeholder.age": "Geben Sie Ihr Alter ein",
+  "person.form.label.birthday": "Geburtstag",
+  "person.form.label.height": "Größe",
+  "person.form.placeholder.height": "Geben Sie Ihre Größe ein",
+  "person.form.label.job_title": "Berufsbezeichnung",
+  "person.form.option.select_job": "Beruf auswählen",
+  "person.form.label.skills": "Fähigkeiten",
+  "person.form.label.password": "Passwort",
+  "person.form.placeholder.password": "Passwort eingeben",
+  "person.form.label.gender": "Geschlecht",
+  "person.form.gender.dont_ask": "Nicht fragen!",
+  "person.form.gender.male": "Männlich",
+  "person.form.gender.female": "Weiblich",
+  "person.form.gender.other": "Andere",
+  "person.form.label.married": "Verheiratet",
+  "person.form.married.yes": "Ja",
+  "person.form.married.no": "Nein",
+  "person.form.label.color": "Farbe",
+  "person.form.tooltip.color": "Wählen Sie Ihre Farbe",
+  "person.form.button.submit": "Einreichen",
+  "person.form.button.cancel": "Abbrechen"
 }
