--- a/example/lib/languages/en.json
+++ b/example/lib/languages/en.json
@@ -143,5 +143,71 @@
   "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
   "testWebSocket.stream": "Video Stream",
   "testWebSocket.stopStream": "Stop",
-  "error.field.relation": "The value of this field is not valid"
+  "error.field.relation": "The value of this field is not valid",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "Example MySQL",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "Title",
+  "mysql.table.header.author": "Author",
+  "mysql.table.header.publishedDate": "Published Date",
+  "mysql.table.header.categoryId": "Category ID",
+  "mysql.table.header.actions": "Actions",
+  "mysql.table.header.booksCount": "Books Count",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "Title",
+  "mysql.placeholder.author": "Author",
+  "mysql.placeholder.publishedDate": "Published Date",
+  "mysql.filter.allCategories": "All Categories",
+  "mysql.button.deleteSelected": "Delete Selected",
+  "mysql.button.update": "Update",
+  "mysql.button.reset": "Reset",
+  "mysql.button.filter": "Filter",
+  "mysql.button.delete": "Delete",
+  "mysql.button.edit": "Edit",
+  "mysql.message.deleteSelectedBooks": "Are you sure you want to delete the selected books?",
+  "mysql.message.noBooksSelected": "No books selected for deletion.",
+  "mysql.message.deleteBook": "Are you sure you want to delete this book?",
+  "mysql.message.deleteCategory": "Are you sure you want to delete this category?",
+  "mysql.message.noRecords": "No records found",
+  "mysql.message.noCategories": "No categories found",
+  "mysql.categories.title": "Example MySQL Categories",
+  "sidebar.mongo": "MongoDB Example",
+  "person.example.title": "Person Example",
+  "person.table.header.name": "Name",
+  "person.table.header.age": "Age",
+  "person.table.header.married": "Married",
+  "person.table.header.email": "Email",
+  "person.table.header.height": "Height",
+  "person.table.header.birthday": "Birthday",
+  "person.table.header.job": "Job",
+  "person.table.header.skills": "Skills",
+  "person.table.header.action": "Action",
+  "person.table.empty": "No persons found.",
+  "database.table.empty": "No records found",
+  "person.form.label.name": "Name",
+  "person.form.placeholder.name": "Enter your name",
+  "person.form.label.email": "Email",
+  "person.form.placeholder.email": "Enter your email",
+  "person.form.label.age": "Age",
+  "person.form.placeholder.age": "Enter your age",
+  "person.form.label.birthday": "Birthday",
+  "person.form.label.height": "Height",
+  "person.form.placeholder.height": "Enter your height",
+  "person.form.label.job_title": "Job Title",
+  "person.form.option.select_job": "Select Job",
+  "person.form.label.skills": "Skills",
+  "person.form.label.password": "Password",
+  "person.form.placeholder.password": "Enter password",
+  "person.form.label.gender": "Gender",
+  "person.form.gender.dont_ask": "Don't ask me!",
+  "person.form.gender.male": "Male",
+  "person.form.gender.female": "Female",
+  "person.form.gender.other": "Other",
+  "person.form.label.married": "Married",
+  "person.form.married.yes": "Yes",
+  "person.form.married.no": "No",
+  "person.form.label.color": "Color",
+  "person.form.tooltip.color": "Choose your color",
+  "person.form.button.submit": "Submit",
+  "person.form.button.cancel": "Cancel"
 }
