--- a/example/lib/languages/fa.json
+++ b/example/lib/languages/fa.json
@@ -140,6 +140,74 @@
   "error.field.min": "مقدار باید بیشتر از یا برابر با {0} باشد",
   "error.field.max": "مقدار باید کمتر از یا برابر با {0} باشد",
   "error.invalid.password": "رمز عبور نامعتبر است، باید شامل [عدد/حروف (بزرگ و کوچک)/؟@",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
   "testWebSocket.stream": "Video Stream",
-  "testWebSocket.stopStream": "Stop"
+  "testWebSocket.stopStream": "Stop",
+  "error.field.relation": "مقدار این فیلد نامعتبر است",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "نمونه MySQL",
+  "mysql.table.header.id": "شناسه",
+  "mysql.table.header.title": "عنوان",
+  "mysql.table.header.author": "نویسنده",
+  "mysql.table.header.publishedDate": "تاریخ انتشار",
+  "mysql.table.header.categoryId": "شناسه دسته‌بندی",
+  "mysql.table.header.actions": "عملیات",
+  "mysql.table.header.booksCount": "تعداد کتاب‌ها",
+  "mysql.placeholder.id": "شناسه",
+  "mysql.placeholder.title": "عنوان",
+  "mysql.placeholder.author": "نویسنده",
+  "mysql.placeholder.publishedDate": "تاریخ انتشار",
+  "mysql.filter.allCategories": "همه دسته‌بندی‌ها",
+  "mysql.button.deleteSelected": "حذف انتخاب شده‌ها",
+  "mysql.button.update": "به‌روزرسانی",
+  "mysql.button.reset": "بازنشانی",
+  "mysql.button.filter": "فیلتر",
+  "mysql.button.delete": "حذف",
+  "mysql.button.edit": "ویرایش",
+  "mysql.message.deleteSelectedBooks": "آیا از حذف کتاب‌های انتخاب شده اطمینان دارید؟",
+  "mysql.message.noBooksSelected": "هیچ کتابی برای حذف انتخاب نشده است.",
+  "mysql.message.deleteBook": "آیا از حذف این کتاب اطمینان دارید؟",
+  "mysql.message.deleteCategory": "آیا از حذف این دسته‌بندی اطمینان دارید؟",
+  "mysql.message.noRecords": "هیچ رکوردی یافت نشد",
+  "mysql.message.noCategories": "هیچ دسته‌بندی یافت نشد",
+  "mysql.categories.title": "دسته‌بندی‌های نمونه MySQL",
+  "sidebar.mongo": "نمونه MongoDB",
+  "person.example.title": "نمونه شخص",
+  "person.table.header.name": "نام",
+  "person.table.header.age": "سن",
+  "person.table.header.married": "متاهل",
+  "person.table.header.email": "ایمیل",
+  "person.table.header.height": "قد",
+  "person.table.header.birthday": "تاریخ تولد",
+  "person.table.header.job": "شغل",
+  "person.table.header.skills": "مهارت‌ها",
+  "person.table.header.action": "عملیات",
+  "person.table.empty": "هیچ شخصی یافت نشد.",
+  "database.table.empty": "هیچ رکوردی یافت نشد",
+  "person.form.label.name": "نام",
+  "person.form.placeholder.name": "نام خود را وارد کنید",
+  "person.form.label.email": "ایمیل",
+  "person.form.placeholder.email": "ایمیل خود را وارد کنید",
+  "person.form.label.age": "سن",
+  "person.form.placeholder.age": "سن خود را وارد کنید",
+  "person.form.label.birthday": "تاریخ تولد",
+  "person.form.label.height": "قد",
+  "person.form.placeholder.height": "قد خود را وارد کنید",
+  "person.form.label.job_title": "عنوان شغلی",
+  "person.form.option.select_job": "شغل را انتخاب کنید",
+  "person.form.label.skills": "مهارت‌ها",
+  "person.form.label.password": "رمز عبور",
+  "person.form.placeholder.password": "رمز عبور را وارد کنید",
+  "person.form.label.gender": "جنسیت",
+  "person.form.gender.dont_ask": "از من نپرس!",
+  "person.form.gender.male": "مرد",
+  "person.form.gender.female": "زن",
+  "person.form.gender.other": "دیگر",
+  "person.form.label.married": "متاهل",
+  "person.form.married.yes": "بله",
+  "person.form.married.no": "خیر",
+  "person.form.label.color": "رنگ",
+  "person.form.tooltip.color": "رنگ خود را انتخاب کنید",
+  "person.form.button.submit": "ارسال",
+  "person.form.button.cancel": "لغو"
 }
