--- a/example/lib/languages/ko.json
+++ b/example/lib/languages/ko.json
@@ -1,145 +1,213 @@
 {
-    "dir": "ltr",
-    "example.params": "내 이름은 {name}이고, 나이는 {age}입니다.",
-    "example.path": "로컬라이제이션을 위한 example.path 테스트 경로",
-    "example.tstring": "i18n을 위한 TString 객체 테스트",
-    "logo": "WebApp",
-    "logo.title": "WebApp",
-    "pages.title": "제목",
-    "welcome.message": "환영합니다",
-    "features.title": "WebApp 기능",
-    "features.description": "WebApp은 Dart 언어를 사용하여 강력한 웹 애플리케이션을 가장 간단한 방법으로 구축하는 데 필요한 모든 것을 제공합니다. 이 도구에는 빠르고 가벼우며 견고한 웹 앱을 만드는 기능 세트가 포함되어 있습니다. 제공하는 기능은 다음과 같습니다:",
-    "features.websocket": "WebSocket",
-    "features.mongodb": "MongoDB",
-    "features.cronjobs": "Cron 작업",
-    "features.routing": "라우팅",
-    "features.formvalidators": "폼 유효성 검사기",
-    "features.htmltools": "신속한 HTML 페이지 개발 도구",
-    "features.dbmodel": "데이터베이스 모델 생성",
-    "features.fastapi": "OpenAPI 문서화로 빠른 API 개발",
-    "features.other": "기타 많은 기능이 있으며, 예시에서 탐구할 것입니다.",
-    "login.success": "로그인 성공",
-    "auth.test": "인증 테스트",
-    "auth.welcome": "환영합니다,",
-    "auth.logout": "로그아웃",
-    "auth.routeExample": "인증이 필요한 경로의 예",
-    "auth.logoutRoute": "로그아웃 경로의 예",
-    "cookies.test": "쿠키 테스트",
-    "cookies.key": "키",
-    "cookies.value": "값",
-    "cookies.action": "작업",
-    "cookies.placeholder.name": "쿠키 이름",
-    "cookies.placeholder.value": "쿠키 값",
-    "cookies.safe": "안전",
-    "cookies.add": "추가",
-    "cookies.remove": "쿠키 삭제",
-    "cookies.addCookie": "쿠키 추가",
-    "auth.view": "보기",
-    "auth.controller": "컨트롤러",
-    "auth.authController": "인증 컨트롤러",
-    "auth.router": "라우터",
-    "email.test": "이메일 테스트",
-    "email.from": "보낸 사람",
-    "email.fromName": "당신의 이름",
-    "email.to": "받는 사람",
-    "email.subject": "제목",
-    "email.message": "메시지",
-    "email.host": "호스트",
-    "email.port": "포트",
-    "email.username": "사용자 이름",
-    "email.password": "비밀번호",
-    "email.allowInsecure": "안전하지 않은 연결 허용",
-    "email.ssl": "SSL",
-    "email.success": "이메일이 성공적으로 전송되었습니다!",
-    "email.failed": "이메일 전송에 실패했습니다.",
-    "email.send": "이메일 전송",
-    "email.placeholder.name": "당신의 이름을 입력하세요",
-    "email.placeholder.to": "받는 사람 이메일 주소 입력",
-    "email.placeholder.subject": "제목 입력",
-    "email.placeholder.message": "메시지 입력",
-    "email.placeholder.host": "호스트 이름 입력",
-    "email.placeholder.port": "포트 번호 입력",
-    "email.placeholder.username": "사용자 이름 입력",
-    "email.placeholder.password": "비밀번호 입력",
-    "form.validation.title": "폼 유효성 검사 테스트",
-    "form.validation.credentials.email": "이메일",
-    "form.validation.credentials.password": "비밀번호",
-    "form.validation.email": "이메일 주소",
-    "form.validation.emailPlaceholder": "이메일을 입력하세요",
-    "form.validation.password": "비밀번호",
-    "form.validation.passwordPlaceholder": "비밀번호를 입력하세요",
-    "form.validation.login": "로그인",
-    "form.validation.loginError": "로그인 오류",
-    "form.validation.loginSuccess": "로그인 성공! 환영합니다",
-    "form.validation.logout": "로그아웃",
-    "form.validation.view": "보기",
-    "form.validation.controller": "컨트롤러",
-    "i18n.title": "언어 테스트 (i18n)",
-    "i18n.language.english": "영어",
-    "i18n.language.persian": "페르시아어",
-    "i18n.language.dutch": "네덜란드어",
-    "i18n.exampleTString": "예제 TString",
-    "i18n.examplePath": "예제 경로",
-    "i18n.examplePathString": "예제 경로 문자열",
-    "i18n.exampleParams": "안녕하세요, 제 이름은 {name}이고, {age}세입니다.",
-    "i18n.view": "보기",
-    "i18n.controller": "컨트롤러",
-    "i18n.languagesDirectory": "언어 디렉토리",
-    "webappInfo.title": "WebApp 정보",
-    "webappInfo.key": "{key}",
-    "webappInfo.info": "{info}",
-    "webappInfo.details": "{details}",
-    "webRouteExample.title": "웹 경로 예제",
-    "webRouteExample.path": "경로",
-    "webRouteExample.type": "유형",
-    "webRouteExample.permissions": "권한",
-    "webRouteExample.auth": "인증",
-    "webRouteExample.controller": "컨트롤러",
-    "webRouteExample.router": "라우터",
-    "testWebSocket.title": "WebSocket 테스트",
-    "testWebSocket.output": "출력",
-    "testWebSocket.getTime": "시간 가져오기",
-    "testWebSocket.randomMessage": "랜덤 메시지",
-    "testWebSocket.clientLists": "클라이언트 목록",
-    "testWebSocket.clear": "지우기",
-    "navbar.toggleSidebar": "사이드바 전환",
-    "navbar.toggleNavigation": "내비게이션 전환",
-    "languages.english": "영어",
-    "languages.persian": "페르시아어",
-    "languages.dutch": "네덜란드어",
-    "sidebar.home": "홈",
-    "sidebar.info": "정보",
-    "sidebar.formExample": "폼 예제",
-    "sidebar.cookieExample": "쿠키 예제",
-    "sidebar.routeExample": "경로 예제",
-    "sidebar.socketExample": "Web Socket 예제",
-    "sidebar.emailExample": "이메일 예제",
-    "sidebar.authExample": "인증 예제",
-    "sidebar.languageExample": "언어 (i18n) 예제",
-    "sidebar.debugExample": "디버그 예제",
-    "sidebar.errorExample": "오류",
-    "sidebar.dumpExample": "변수 덤프",
-    "sidebar.monogdbExample": "MongoDB 예제",
-    "database.test.title": "데이터베이스 테스트 (MongoDB)",
-    "database.table.header.title": "제목",
-    "database.table.header.slug": "슬러그",
-    "database.table.header.action": "작업",
-    "database.table.input.placeholder.title": "제목 입력",
-    "database.table.button.add": "추가",
-    "pagination.showing": "표시 중",
-    "pagination.to": "에서",
-    "pagination.of": "의",
-    "pagination.entries": "항목",
-    "sidebar.paginationExample": "페이지네이션 예제",
-    "project.contributing": "기여",
-    "project.documentation": "문서",
-    "project.github": "GitHub",
-    "error.field.required": "이 필드는 필수입니다",
-    "error.field.email": "잘못된 이메일 주소입니다",
-    "error.field": "유효하지 않은 값",
-    "error.field.min": "값은 {0} 이상이어야 합니다",
-    "error.field.max": "값은 {0} 이하여야 합니다",
-    "error.invalid.password": "비밀번호가 유효하지 않습니다, [숫자/문자(대문자+소문자)/?@가 포함되어야 합니다",
-    "testWebSocket.stream": "Video Stream",
-    "testWebSocket.stopStream": "Stop"
+  "dir": "ltr",
+  "example.params": "내 이름은 {name}이고, 나이는 {age}입니다.",
+  "example.path": "로컬라이제이션을 위한 example.path 테스트 경로",
+  "example.tstring": "i18n을 위한 TString 객체 테스트",
+  "logo": "WebApp",
+  "logo.title": "WebApp",
+  "pages.title": "제목",
+  "welcome.message": "환영합니다",
+  "features.title": "WebApp 기능",
+  "features.description": "WebApp은 Dart 언어를 사용하여 강력한 웹 애플리케이션을 가장 간단한 방법으로 구축하는 데 필요한 모든 것을 제공합니다. 이 도구에는 빠르고 가벼우며 견고한 웹 앱을 만드는 기능 세트가 포함되어 있습니다. 제공하는 기능은 다음과 같습니다:",
+  "features.websocket": "WebSocket",
+  "features.mongodb": "MongoDB",
+  "features.cronjobs": "Cron 작업",
+  "features.routing": "라우팅",
+  "features.formvalidators": "폼 유효성 검사기",
+  "features.htmltools": "신속한 HTML 페이지 개발 도구",
+  "features.dbmodel": "데이터베이스 모델 생성",
+  "features.fastapi": "OpenAPI 문서화로 빠른 API 개발",
+  "features.other": "기타 많은 기능이 있으며, 예시에서 탐구할 것입니다.",
+  "login.success": "로그인 성공",
+  "auth.test": "인증 테스트",
+  "auth.welcome": "환영합니다,",
+  "auth.logout": "로그아웃",
+  "auth.routeExample": "인증이 필요한 경로의 예",
+  "auth.logoutRoute": "로그아웃 경로의 예",
+  "cookies.test": "쿠키 테스트",
+  "cookies.key": "키",
+  "cookies.value": "값",
+  "cookies.action": "작업",
+  "cookies.placeholder.name": "쿠키 이름",
+  "cookies.placeholder.value": "쿠키 값",
+  "cookies.safe": "안전",
+  "cookies.add": "추가",
+  "cookies.remove": "쿠키 삭제",
+  "cookies.addCookie": "쿠키 추가",
+  "auth.view": "보기",
+  "auth.controller": "컨트롤러",
+  "auth.authController": "인증 컨트롤러",
+  "auth.router": "라우터",
+  "email.test": "이메일 테스트",
+  "email.from": "보낸 사람",
+  "email.fromName": "당신의 이름",
+  "email.to": "받는 사람",
+  "email.subject": "제목",
+  "email.message": "메시지",
+  "email.host": "호스트",
+  "email.port": "포트",
+  "email.username": "사용자 이름",
+  "email.password": "비밀번호",
+  "email.allowInsecure": "안전하지 않은 연결 허용",
+  "email.ssl": "SSL",
+  "email.success": "이메일이 성공적으로 전송되었습니다!",
+  "email.failed": "이메일 전송에 실패했습니다.",
+  "email.send": "이메일 전송",
+  "email.placeholder.name": "당신의 이름을 입력하세요",
+  "email.placeholder.to": "받는 사람 이메일 주소 입력",
+  "email.placeholder.subject": "제목 입력",
+  "email.placeholder.message": "메시지 입력",
+  "email.placeholder.host": "호스트 이름 입력",
+  "email.placeholder.port": "포트 번호 입력",
+  "email.placeholder.username": "사용자 이름 입력",
+  "email.placeholder.password": "비밀번호 입력",
+  "form.validation.title": "폼 유효성 검사 테스트",
+  "form.validation.credentials.email": "이메일",
+  "form.validation.credentials.password": "비밀번호",
+  "form.validation.email": "이메일 주소",
+  "form.validation.emailPlaceholder": "이메일을 입력하세요",
+  "form.validation.password": "비밀번호",
+  "form.validation.passwordPlaceholder": "비밀번호를 입력하세요",
+  "form.validation.login": "로그인",
+  "form.validation.loginError": "로그인 오류",
+  "form.validation.loginSuccess": "로그인 성공! 환영합니다",
+  "form.validation.logout": "로그아웃",
+  "form.validation.view": "보기",
+  "form.validation.controller": "컨트롤러",
+  "i18n.title": "언어 테스트 (i18n)",
+  "i18n.language.english": "영어",
+  "i18n.language.persian": "페르시아어",
+  "i18n.language.dutch": "네덜란드어",
+  "i18n.exampleTString": "예제 TString",
+  "i18n.examplePath": "예제 경로",
+  "i18n.examplePathString": "예제 경로 문자열",
+  "i18n.exampleParams": "안녕하세요, 제 이름은 {name}이고, {age}세입니다.",
+  "i18n.view": "보기",
+  "i18n.controller": "컨트롤러",
+  "i18n.languagesDirectory": "언어 디렉토리",
+  "webappInfo.title": "WebApp 정보",
+  "webappInfo.key": "{key}",
+  "webappInfo.info": "{info}",
+  "webappInfo.details": "{details}",
+  "webRouteExample.title": "웹 경로 예제",
+  "webRouteExample.path": "경로",
+  "webRouteExample.type": "유형",
+  "webRouteExample.permissions": "권한",
+  "webRouteExample.auth": "인증",
+  "webRouteExample.controller": "컨트롤러",
+  "webRouteExample.router": "라우터",
+  "testWebSocket.title": "WebSocket 테스트",
+  "testWebSocket.output": "출력",
+  "testWebSocket.getTime": "시간 가져오기",
+  "testWebSocket.randomMessage": "랜덤 메시지",
+  "testWebSocket.clientLists": "클라이언트 목록",
+  "testWebSocket.clear": "지우기",
+  "navbar.toggleSidebar": "사이드바 전환",
+  "navbar.toggleNavigation": "내비게이션 전환",
+  "languages.english": "영어",
+  "languages.persian": "페르시아어",
+  "languages.dutch": "네덜란드어",
+  "sidebar.home": "홈",
+  "sidebar.info": "정보",
+  "sidebar.formExample": "폼 예제",
+  "sidebar.cookieExample": "쿠키 예제",
+  "sidebar.routeExample": "경로 예제",
+  "sidebar.socketExample": "Web Socket 예제",
+  "sidebar.emailExample": "이메일 예제",
+  "sidebar.authExample": "인증 예제",
+  "sidebar.languageExample": "언어 (i18n) 예제",
+  "sidebar.debugExample": "디버그 예제",
+  "sidebar.errorExample": "오류",
+  "sidebar.dumpExample": "변수 덤프",
+  "sidebar.monogdbExample": "MongoDB 예제",
+  "database.test.title": "데이터베이스 테스트 (MongoDB)",
+  "database.table.header.title": "제목",
+  "database.table.header.slug": "슬러그",
+  "database.table.header.action": "작업",
+  "database.table.input.placeholder.title": "제목 입력",
+  "database.table.button.add": "추가",
+  "pagination.showing": "표시 중",
+  "pagination.to": "에서",
+  "pagination.of": "의",
+  "pagination.entries": "항목",
+  "sidebar.paginationExample": "페이지네이션 예제",
+  "project.contributing": "기여",
+  "project.documentation": "문서",
+  "project.github": "GitHub",
+  "error.field.required": "이 필드는 필수입니다",
+  "error.field.email": "잘못된 이메일 주소입니다",
+  "error.field": "유효하지 않은 값",
+  "error.field.min": "값은 {0} 이상이어야 합니다",
+  "error.field.max": "값은 {0} 이하여야 합니다",
+  "error.invalid.password": "비밀번호가 유효하지 않습니다, [숫자/문자(대문자+소문자)/?@가 포함되어야 합니다",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "testWebSocket.stream": "비디오 스트림",
+  "testWebSocket.stopStream": "중지",
+  "error.field.relation": "이 필드의 값이 유효하지 않습니다",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "MySQL 예제",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "제목",
+  "mysql.table.header.author": "작성자",
+  "mysql.table.header.publishedDate": "발행일",
+  "mysql.table.header.categoryId": "카테고리 ID",
+  "mysql.table.header.actions": "작업",
+  "mysql.table.header.booksCount": "도서 수",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "제목",
+  "mysql.placeholder.author": "작성자",
+  "mysql.placeholder.publishedDate": "발행일",
+  "mysql.filter.allCategories": "모든 카테고리",
+  "mysql.button.deleteSelected": "선택 항목 삭제",
+  "mysql.button.update": "업데이트",
+  "mysql.button.reset": "초기화",
+  "mysql.button.filter": "필터",
+  "mysql.button.delete": "삭제",
+  "mysql.button.edit": "수정",
+  "mysql.message.deleteSelectedBooks": "선택한 도서를 삭제하시겠습니까?",
+  "mysql.message.noBooksSelected": "삭제할 도서가 선택되지 않았습니다.",
+  "mysql.message.deleteBook": "이 도서를 삭제하시겠습니까?",
+  "mysql.message.deleteCategory": "이 카테고리를 삭제하시겠습니까?",
+  "mysql.message.noRecords": "레코드를 찾을 수 없습니다",
+  "mysql.message.noCategories": "카테고리를 찾을 수 없습니다",
+  "mysql.categories.title": "MySQL 카테고리 예제",
+  "sidebar.mongo": "MongoDB 예제",
+  "person.example.title": "개인 예제",
+  "person.table.header.name": "이름",
+  "person.table.header.age": "나이",
+  "person.table.header.married": "결혼 여부",
+  "person.table.header.email": "이메일",
+  "person.table.header.height": "키",
+  "person.table.header.birthday": "생일",
+  "person.table.header.job": "직업",
+  "person.table.header.skills": "기술",
+  "person.table.header.action": "작업",
+  "person.table.empty": "사람을 찾을 수 없습니다.",
+  "database.table.empty": "레코드를 찾을 수 없습니다",
+  "person.form.label.name": "이름",
+  "person.form.placeholder.name": "이름을 입력하세요",
+  "person.form.label.email": "이메일",
+  "person.form.placeholder.email": "이메일을 입력하세요",
+  "person.form.label.age": "나이",
+  "person.form.placeholder.age": "나이를 입력하세요",
+  "person.form.label.birthday": "생일",
+  "person.form.label.height": "키",
+  "person.form.placeholder.height": "키를 입력하세요",
+  "person.form.label.job_title": "직업 제목",
+  "person.form.option.select_job": "직업 선택",
+  "person.form.label.skills": "기술",
+  "person.form.label.password": "비밀번호",
+  "person.form.placeholder.password": "비밀번호를 입력하세요",
+  "person.form.label.gender": "성별",
+  "person.form.gender.dont_ask": "묻지 마세요!",
+  "person.form.gender.male": "남성",
+  "person.form.gender.female": "여성",
+  "person.form.gender.other": "기타",
+  "person.form.label.married": "결혼",
+  "person.form.married.yes": "예",
+  "person.form.married.no": "아니오",
+  "person.form.label.color": "색상",
+  "person.form.tooltip.color": "색상을 선택하세요",
+  "person.form.button.submit": "제출",
+  "person.form.button.cancel": "취소"
 }
