--- a/example/lib/languages/nl.json
+++ b/example/lib/languages/nl.json
@@ -140,6 +140,74 @@
   "error.field.min": "Waarde moet groter dan of gelijk aan {0} zijn",
   "error.field.max": "Waarde moet kleiner dan of gelijk aan {0} zijn",
   "error.invalid.password": "Wachtwoord is ongeldig, het moet [Nummer/Teken (Hoofdletter+Kleine letter)/?@ bevatten",
-  "testWebSocket.stream": "Video Stream",
-  "testWebSocket.stopStream": "Stop"
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "testWebSocket.stream": "Videostream",
+  "testWebSocket.stopStream": "Stoppen",
+  "error.field.relation": "De waarde van dit veld is ongeldig",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "MySQL Voorbeeld",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "Titel",
+  "mysql.table.header.author": "Auteur",
+  "mysql.table.header.publishedDate": "Publicatiedatum",
+  "mysql.table.header.categoryId": "Categorie-ID",
+  "mysql.table.header.actions": "Acties",
+  "mysql.table.header.booksCount": "Aantal boeken",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "Titel",
+  "mysql.placeholder.author": "Auteur",
+  "mysql.placeholder.publishedDate": "Publicatiedatum",
+  "mysql.filter.allCategories": "Alle categorieën",
+  "mysql.button.deleteSelected": "Verwijder geselecteerde",
+  "mysql.button.update": "Bijwerken",
+  "mysql.button.reset": "Resetten",
+  "mysql.button.filter": "Filteren",
+  "mysql.button.delete": "Verwijderen",
+  "mysql.button.edit": "Bewerken",
+  "mysql.message.deleteSelectedBooks": "Weet u zeker dat u de geselecteerde boeken wilt verwijderen?",
+  "mysql.message.noBooksSelected": "Geen boeken geselecteerd om te verwijderen.",
+  "mysql.message.deleteBook": "Weet u zeker dat u dit boek wilt verwijderen?",
+  "mysql.message.deleteCategory": "Weet u zeker dat u deze categorie wilt verwijderen?",
+  "mysql.message.noRecords": "Geen records gevonden",
+  "mysql.message.noCategories": "Geen categorieën gevonden",
+  "mysql.categories.title": "MySQL Categorieën Voorbeeld",
+  "sidebar.mongo": "MongoDB Voorbeeld",
+  "person.example.title": "Persoon Voorbeeld",
+  "person.table.header.name": "Naam",
+  "person.table.header.age": "Leeftijd",
+  "person.table.header.married": "Getrouwd",
+  "person.table.header.email": "E-mail",
+  "person.table.header.height": "Lengte",
+  "person.table.header.birthday": "Verjaardag",
+  "person.table.header.job": "Baan",
+  "person.table.header.skills": "Vaardigheden",
+  "person.table.header.action": "Actie",
+  "person.table.empty": "Geen personen gevonden.",
+  "database.table.empty": "Geen records gevonden",
+  "person.form.label.name": "Naam",
+  "person.form.placeholder.name": "Voer uw naam in",
+  "person.form.label.email": "E-mail",
+  "person.form.placeholder.email": "Voer uw e-mail in",
+  "person.form.label.age": "Leeftijd",
+  "person.form.placeholder.age": "Voer uw leeftijd in",
+  "person.form.label.birthday": "Verjaardag",
+  "person.form.label.height": "Lengte",
+  "person.form.placeholder.height": "Voer uw lengte in",
+  "person.form.label.job_title": "Functietitel",
+  "person.form.option.select_job": "Selecteer functie",
+  "person.form.label.skills": "Vaardigheden",
+  "person.form.label.password": "Wachtwoord",
+  "person.form.placeholder.password": "Voer wachtwoord in",
+  "person.form.label.gender": "Geslacht",
+  "person.form.gender.dont_ask": "Niet vragen!",
+  "person.form.gender.male": "Man",
+  "person.form.gender.female": "Vrouw",
+  "person.form.gender.other": "Anders",
+  "person.form.label.married": "Gehuwd",
+  "person.form.married.yes": "Ja",
+  "person.form.married.no": "Nee",
+  "person.form.label.color": "Kleur",
+  "person.form.tooltip.color": "Kies uw kleur",
+  "person.form.button.submit": "Verzenden",
+  "person.form.button.cancel": "Annuleren"
 }
