--- a/example/lib/languages/zh.json
+++ b/example/lib/languages/zh.json
@@ -1,145 +1,213 @@
 {
   "dir": "ltr",
-  "example.params": "我的名字是{name}，我的年龄是{age}",
-  "example.path": "example.path的测试路径用于本地化",
-  "example.tstring": "测试TString对象用于i18n",
+  "example.params": "My name is {name}, my age is {age}",
+  "example.path": "Test path of example.path for localization",
+  "example.tstring": "Test TString objects for i18n",
   "logo": "WebApp",
   "logo.title": "WebApp",
-  "pages.title": "标题",
-  "welcome.message": "欢迎来到",
-  "features.title": "WebApp 功能",
-  "features.description": "WebApp 为您提供使用 Dart 语言以最简单方式构建强大Web应用程序所需的一切。此工具包括一组用于创建快速、轻量且强大的Web应用程序的功能。以下是它提供的一些功能：",
+  "pages.title": "Title",
+  "welcome.message": "Welcome to",
+  "features.title": "WebApp Features",
+  "features.description": "WebApp provides you with everything you need to build a powerful web application in the simplest way possible using the Dart language. This tool includes a set of features for creating a fast, lightweight, and robust web app. Here are some of the features it offers:",
   "features.websocket": "WebSocket",
   "features.mongodb": "MongoDB",
-  "features.cronjobs": "定时任务",
-  "features.routing": "路由",
-  "features.formvalidators": "表单验证器",
-  "features.htmltools": "快速开发HTML页面的工具",
-  "features.dbmodel": "数据库模型创建",
-  "features.fastapi": "使用 OpenAPI 文档的快速API开发",
-  "features.other": "以及许多其他功能，我们将在示例中进行探索。",
-  "login.success": "登录成功",
-  "auth.test": "测试认证",
-  "auth.welcome": "欢迎,",
-  "auth.logout": "登出",
-  "auth.routeExample": "需要认证的路由示例",
-  "auth.logoutRoute": "注销路由示例",
-  "cookies.test": "测试 Cookies",
-  "cookies.key": "键",
-  "cookies.value": "值",
-  "cookies.action": "操作",
-  "cookies.placeholder.name": "Cookie 名称",
-  "cookies.placeholder.value": "Cookie 值",
-  "cookies.safe": "安全",
-  "cookies.add": "添加",
-  "cookies.remove": "删除 Cookie",
-  "cookies.addCookie": "添加 Cookie",
-  "auth.view": "视图",
-  "auth.controller": "控制器",
-  "auth.authController": "认证控制器",
-  "auth.router": "路由器",
-  "email.test": "测试邮件",
-  "email.from": "发件人",
-  "email.fromName": "您的姓名",
-  "email.to": "收件人",
-  "email.subject": "主题",
-  "email.message": "消息",
-  "email.host": "主机",
-  "email.port": "端口",
-  "email.username": "用户名",
-  "email.password": "密码",
-  "email.allowInsecure": "允许不安全连接",
+  "features.cronjobs": "Cron Jobs",
+  "features.routing": "Routing",
+  "features.formvalidators": "Form validators",
+  "features.htmltools": "Tools for rapid HTML page development",
+  "features.dbmodel": "Database model creation",
+  "features.fastapi": "Fast API development with OpenAPI documentation",
+  "features.other": "And many other features, which we will explore in the examples.",
+  "login.success": "Login success",
+  "auth.test": "Test Authentication",
+  "auth.welcome": "Welcome,",
+  "auth.logout": "Logout",
+  "auth.routeExample": "Example of a route that requires authentication",
+  "auth.logoutRoute": "Example of logout route",
+  "cookies.test": "Test Cookies",
+  "cookies.key": "Key",
+  "cookies.value": "Value",
+  "cookies.action": "Action",
+  "cookies.placeholder.name": "Cookie name",
+  "cookies.placeholder.value": "Cookie value",
+  "cookies.safe": "Safe",
+  "cookies.add": "Add",
+  "cookies.remove": "Remove cookie",
+  "cookies.addCookie": "Add cookie",
+  "auth.view": "View",
+  "auth.controller": "Controller",
+  "auth.authController": "Authentication Controller",
+  "auth.router": "Router",
+  "email.test": "Test Email",
+  "email.from": "From",
+  "email.fromName": "Your name",
+  "email.to": "To",
+  "email.subject": "Subject",
+  "email.message": "Message",
+  "email.host": "Host",
+  "email.port": "Port",
+  "email.username": "Username",
+  "email.password": "Password",
+  "email.allowInsecure": "Allow insecure",
   "email.ssl": "SSL",
-  "email.success": "邮件发送成功！",
-  "email.failed": "邮件发送失败。",
-  "email.send": "发送邮件",
-  "email.placeholder.name": "输入您的姓名",
-  "email.placeholder.to": "输入收件人邮箱地址",
-  "email.placeholder.subject": "输入主题",
-  "email.placeholder.message": "输入消息",
-  "email.placeholder.host": "输入主机名称",
-  "email.placeholder.port": "输入端口号",
-  "email.placeholder.username": "输入用户名",
-  "email.placeholder.password": "输入密码",
-  "form.validation.title": "测试表单验证",
-  "form.validation.credentials.email": "电子邮件",
-  "form.validation.credentials.password": "密码",
-  "form.validation.email": "电子邮件地址",
-  "form.validation.emailPlaceholder": "输入您的电子邮件",
-  "form.validation.password": "密码",
-  "form.validation.passwordPlaceholder": "输入您的密码",
-  "form.validation.login": "登录",
-  "form.validation.loginError": "登录错误",
-  "form.validation.loginSuccess": "登录成功！欢迎",
-  "form.validation.logout": "登出",
-  "form.validation.view": "视图",
-  "form.validation.controller": "控制器",
-  "i18n.title": "测试语言 (i18n)",
-  "i18n.language.english": "英语",
-  "i18n.language.persian": "波斯语",
-  "i18n.language.dutch": "荷兰语",
-  "i18n.exampleTString": "TString 示例",
-  "i18n.examplePath": "路径示例",
-  "i18n.examplePathString": "路径字符串示例",
-  "i18n.exampleParams": "你好，我的名字是{name}，我{age}岁。",
-  "i18n.view": "视图",
-  "i18n.controller": "控制器",
-  "i18n.languagesDirectory": "语言目录",
-  "webappInfo.title": "WebApp 信息",
+  "email.success": "Email sent successfully!",
+  "email.failed": "Failed to send email.",
+  "email.send": "Send Email",
+  "email.placeholder.name": "Enter Your Name",
+  "email.placeholder.to": "Enter receiver email address",
+  "email.placeholder.subject": "Enter subject",
+  "email.placeholder.message": "Enter message",
+  "email.placeholder.host": "Enter host name",
+  "email.placeholder.port": "Enter port number",
+  "email.placeholder.username": "Enter username",
+  "email.placeholder.password": "Enter password",
+  "form.validation.title": "Test form validation",
+  "form.validation.credentials.email": "Email",
+  "form.validation.credentials.password": "Password",
+  "form.validation.email": "Email address",
+  "form.validation.emailPlaceholder": "Enter your email",
+  "form.validation.password": "Password",
+  "form.validation.passwordPlaceholder": "Enter your password",
+  "form.validation.login": "Login",
+  "form.validation.loginError": "Login error",
+  "form.validation.loginSuccess": "Login success! Welcome",
+  "form.validation.logout": "Logout",
+  "form.validation.view": "View",
+  "form.validation.controller": "Controller",
+  "i18n.title": "Test Language (i18n)",
+  "i18n.language.english": "English",
+  "i18n.language.persian": "Persian",
+  "i18n.language.dutch": "Dutch",
+  "i18n.exampleTString": "Example TString",
+  "i18n.examplePath": "Example Path",
+  "i18n.examplePathString": "Example Path String",
+  "i18n.exampleParams": "Hello, my name is {name} and I am {age} years old.",
+  "i18n.view": "View",
+  "i18n.controller": "Controller",
+  "i18n.languagesDirectory": "Languages directory",
+  "webappInfo.title": "WebApp Info",
   "webappInfo.key": "{key}",
   "webappInfo.info": "{info}",
   "webappInfo.details": "{details}",
-  "webRouteExample.title": "Web 路由示例",
-  "webRouteExample.path": "路径",
-  "webRouteExample.type": "类型",
-  "webRouteExample.permissions": "权限",
-  "webRouteExample.auth": "认证",
-  "webRouteExample.controller": "控制器",
-  "webRouteExample.router": "路由器",
-  "testWebSocket.title": "测试 WebSocket",
-  "testWebSocket.output": "输出",
-  "testWebSocket.getTime": "获取时间",
-  "testWebSocket.randomMessage": "随机消息",
-  "testWebSocket.clientLists": "客户端列表",
-  "testWebSocket.clear": "清除",
-  "navbar.toggleSidebar": "切换侧边栏",
-  "navbar.toggleNavigation": "切换导航",
-  "languages.english": "英语",
-  "languages.persian": "波斯语",
-  "languages.dutch": "荷兰语",
-  "sidebar.home": "主页",
-  "sidebar.info": "信息",
-  "sidebar.formExample": "表单示例",
-  "sidebar.cookieExample": "Cookie 示例",
-  "sidebar.routeExample": "路由示例",
-  "sidebar.socketExample": "Web Socket 示例",
-  "sidebar.emailExample": "邮件示例",
-  "sidebar.authExample": "认证示例",
-  "sidebar.languageExample": "语言 (i18n) 示例",
-  "sidebar.debugExample": "调试示例",
-  "sidebar.errorExample": "错误",
-  "sidebar.dumpExample": "转储变量",
-  "sidebar.monogdbExample": "MongoDB 示例",
-  "database.test.title": "测试数据库 (MongoDB)",
-  "database.table.header.title": "标题",
-  "database.table.header.slug": "别名",
-  "database.table.header.action": "操作",
-  "database.table.input.placeholder.title": "输入标题",
-  "database.table.button.add": "添加",
-  "pagination.showing": "显示",
-  "pagination.to": "到",
-  "pagination.of": "的",
-  "pagination.entries": "条目",
-  "sidebar.paginationExample": "分页示例",
-  "project.contributing": "贡献",
-  "project.documentation": "文档",
-  "project.github": "GitHub",
-  "error.field.required": "该字段是必填项",
-  "error.field.email": "无效的电子邮件地址",
-  "error.field": "无效值",
-  "error.field.min": "值必须大于或等于 {0}",
-  "error.field.max": "值必须小于或等于 {0}",
-  "error.invalid.password": "密码无效，必须包含 [数字/字符(大写+小写)/?@",
+  "webRouteExample.title": "Web Route example",
+  "webRouteExample.path": "Path",
+  "webRouteExample.type": "Type",
+  "webRouteExample.permissions": "Permissions",
+  "webRouteExample.auth": "Auth",
+  "webRouteExample.controller": "Controller",
+  "webRouteExample.router": "Router",
+  "testWebSocket.title": "Test WebSocket",
+  "testWebSocket.output": "Output",
+  "testWebSocket.getTime": "Get Time",
+  "testWebSocket.randomMessage": "Random message",
+  "testWebSocket.clientLists": "Client lists",
+  "testWebSocket.clear": "Clear",
   "testWebSocket.stream": "Video Stream",
-  "testWebSocket.stopStream": "Stop"
+  "testWebSocket.stopStream": "Stop",
+  "navbar.toggleSidebar": "Toggle Sidebar",
+  "navbar.toggleNavigation": "Toggle Navigation",
+  "languages.english": "English",
+  "languages.persian": "Persian",
+  "languages.dutch": "Dutch",
+  "sidebar.home": "Home",
+  "sidebar.info": "Info",
+  "sidebar.formExample": "Form Example",
+  "sidebar.cookieExample": "Cookie Example",
+  "sidebar.routeExample": "Route Example",
+  "sidebar.socketExample": "Web Socket Example",
+  "sidebar.emailExample": "Email Example",
+  "sidebar.authExample": "Authentication Example",
+  "sidebar.languageExample": "Language (i18n) Example",
+  "sidebar.debugExample": "Debug Example",
+  "sidebar.errorExample": "Error",
+  "sidebar.dumpExample": "Dump variables",
+  "sidebar.monogdbExample": "MongoDB Example",
+  "database.test.title": "Test Database (Mongo db)",
+  "database.table.header.title": "Title",
+  "database.table.header.slug": "Slug",
+  "database.table.header.action": "Action",
+  "database.table.input.placeholder.title": "Enter Title",
+  "database.table.button.add": "Add",
+  "pagination.showing": "Showing",
+  "pagination.to": "to",
+  "pagination.of": "of",
+  "pagination.entries": "entries",
+  "sidebar.paginationExample": "Pagination Example",
+  "project.contributing": "Contributing",
+  "project.documentation": "Documentation",
+  "project.github": "GitHub",
+  "error.field.required": "This field is required",
+  "error.field.email": "Invalid email address",
+  "error.field": "Error value",
+  "error.field.min": "Value must be greater than or equal to {0}",
+  "error.field.max": "Value must be less than or equal to {0}",
+  "error.invalid.password": "Password is not valid, it most has [Number/Char(Upper+Lower)/?@",
+  "error.field.relation": "The value of this field is not valid",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "Example MySQL",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "Title",
+  "mysql.table.header.author": "Author",
+  "mysql.table.header.publishedDate": "Published Date",
+  "mysql.table.header.categoryId": "Category ID",
+  "mysql.table.header.actions": "Actions",
+  "mysql.table.header.booksCount": "Books Count",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "Title",
+  "mysql.placeholder.author": "Author",
+  "mysql.placeholder.publishedDate": "Published Date",
+  "mysql.filter.allCategories": "All Categories",
+  "mysql.button.deleteSelected": "Delete Selected",
+  "mysql.button.update": "Update",
+  "mysql.button.reset": "Reset",
+  "mysql.button.filter": "Filter",
+  "mysql.button.delete": "Delete",
+  "mysql.button.edit": "Edit",
+  "mysql.message.deleteSelectedBooks": "Are you sure you want to delete the selected books?",
+  "mysql.message.noBooksSelected": "No books selected for deletion.",
+  "mysql.message.deleteBook": "Are you sure you want to delete this book?",
+  "mysql.message.deleteCategory": "Are you sure you want to delete this category?",
+  "mysql.message.noRecords": "No records found",
+  "mysql.message.noCategories": "No categories found",
+  "mysql.categories.title": "Example MySQL Categories",
+  "sidebar.mongo": "MongoDB Example",
+  "person.example.title": "Person Example",
+  "person.table.header.name": "Name",
+  "person.table.header.age": "Age",
+  "person.table.header.married": "Married",
+  "person.table.header.email": "Email",
+  "person.table.header.height": "Height",
+  "person.table.header.birthday": "Birthday",
+  "person.table.header.job": "Job",
+  "person.table.header.skills": "Skills",
+  "person.table.header.action": "Action",
+  "person.table.empty": "No persons found.",
+  "database.table.empty": "No records found",
+  "person.form.label.name": "Name",
+  "person.form.placeholder.name": "Enter your name",
+  "person.form.label.email": "Email",
+  "person.form.placeholder.email": "Enter your email",
+  "person.form.label.age": "Age",
+  "person.form.placeholder.age": "Enter your age",
+  "person.form.label.birthday": "Birthday",
+  "person.form.label.height": "Height",
+  "person.form.placeholder.height": "Enter your height",
+  "person.form.label.job_title": "Job Title",
+  "person.form.option.select_job": "Select Job",
+  "person.form.label.skills": "Skills",
+  "person.form.label.password": "Password",
+  "person.form.placeholder.password": "Enter password",
+  "person.form.label.gender": "Gender",
+  "person.form.gender.dont_ask": "Don't ask me!",
+  "person.form.gender.male": "Male",
+  "person.form.gender.female": "Female",
+  "person.form.gender.other": "Other",
+  "person.form.label.married": "Married",
+  "person.form.married.yes": "Yes",
+  "person.form.married.no": "No",
+  "person.form.label.color": "Color",
+  "person.form.tooltip.color": "Choose your color",
+  "person.form.button.submit": "Submit",
+  "person.form.button.cancel": "Cancel"
 }
