--- a/example/lib/languages/es.json
+++ b/example/lib/languages/es.json
@@ -1,145 +1,213 @@
 {
-    "dir": "ltr",
-    "example.params": "Mi nombre es {name}, mi edad es {age}",
-    "example.path": "Ruta de prueba de example.path para la localización",
-    "example.tstring": "Probar objetos TString para la internacionalización",
-    "logo": "WebApp",
-    "logo.title": "WebApp",
-    "pages.title": "Título",
-    "welcome.message": "Bienvenido a",
-    "features.title": "Características de WebApp",
-    "features.description": "WebApp te proporciona todo lo que necesitas para construir una aplicación web potente de la manera más sencilla posible utilizando el lenguaje Dart. Esta herramienta incluye un conjunto de funciones para crear una aplicación web rápida, ligera y robusta. A continuación, algunas de las características que ofrece:",
-    "features.websocket": "WebSocket",
-    "features.mongodb": "MongoDB",
-    "features.cronjobs": "Tareas programadas (Cron Jobs)",
-    "features.routing": "Enrutamiento",
-    "features.formvalidators": "Validadores de formularios",
-    "features.htmltools": "Herramientas para el desarrollo rápido de páginas HTML",
-    "features.dbmodel": "Creación de modelos de base de datos",
-    "features.fastapi": "Desarrollo rápido de API con documentación OpenAPI",
-    "features.other": "Y muchas otras características que exploraremos en los ejemplos.",
-    "login.success": "Inicio de sesión exitoso",
-    "auth.test": "Probar autenticación",
-    "auth.welcome": "Bienvenido,",
-    "auth.logout": "Cerrar sesión",
-    "auth.routeExample": "Ejemplo de ruta que requiere autenticación",
-    "auth.logoutRoute": "Ejemplo de ruta para cerrar sesión",
-    "cookies.test": "Probar cookies",
-    "cookies.key": "Clave",
-    "cookies.value": "Valor",
-    "cookies.action": "Acción",
-    "cookies.placeholder.name": "Nombre de la cookie",
-    "cookies.placeholder.value": "Valor de la cookie",
-    "cookies.safe": "Seguro",
-    "cookies.add": "Agregar",
-    "cookies.remove": "Eliminar cookie",
-    "cookies.addCookie": "Agregar cookie",
-    "auth.view": "Ver",
-    "auth.controller": "Controlador",
-    "auth.authController": "Controlador de autenticación",
-    "auth.router": "Enrutador",
-    "email.test": "Probar correo electrónico",
-    "email.from": "De",
-    "email.fromName": "Tu nombre",
-    "email.to": "Para",
-    "email.subject": "Asunto",
-    "email.message": "Mensaje",
-    "email.host": "Servidor",
-    "email.port": "Puerto",
-    "email.username": "Nombre de usuario",
-    "email.password": "Contraseña",
-    "email.allowInsecure": "Permitir inseguro",
-    "email.ssl": "SSL",
-    "email.success": "¡Correo enviado con éxito!",
-    "email.failed": "No se pudo enviar el correo.",
-    "email.send": "Enviar correo electrónico",
-    "email.placeholder.name": "Ingresa tu nombre",
-    "email.placeholder.to": "Ingresa la dirección de correo del destinatario",
-    "email.placeholder.subject": "Ingresa el asunto",
-    "email.placeholder.message": "Ingresa el mensaje",
-    "email.placeholder.host": "Ingresa el nombre del servidor",
-    "email.placeholder.port": "Ingresa el número de puerto",
-    "email.placeholder.username": "Ingresa el nombre de usuario",
-    "email.placeholder.password": "Ingresa la contraseña",
-    "form.validation.title": "Probar validación de formulario",
-    "form.validation.credentials.email": "Correo electrónico",
-    "form.validation.credentials.password": "Contraseña",
-    "form.validation.email": "Dirección de correo electrónico",
-    "form.validation.emailPlaceholder": "Ingresa tu correo electrónico",
-    "form.validation.password": "Contraseña",
-    "form.validation.passwordPlaceholder": "Ingresa tu contraseña",
-    "form.validation.login": "Iniciar sesión",
-    "form.validation.loginError": "Error de inicio de sesión",
-    "form.validation.loginSuccess": "¡Inicio de sesión exitoso! Bienvenido",
-    "form.validation.logout": "Cerrar sesión",
-    "form.validation.view": "Ver",
-    "form.validation.controller": "Controlador",
-    "i18n.title": "Probar idioma (i18n)",
-    "i18n.language.english": "Inglés",
-    "i18n.language.persian": "Persa",
-    "i18n.language.dutch": "Holandés",
-    "i18n.exampleTString": "Ejemplo de TString",
-    "i18n.examplePath": "Ruta de ejemplo",
-    "i18n.examplePathString": "Cadena de ruta de ejemplo",
-    "i18n.exampleParams": "Hola, mi nombre es {name} y tengo {age} años.",
-    "i18n.view": "Ver",
-    "i18n.controller": "Controlador",
-    "i18n.languagesDirectory": "Directorio de idiomas",
-    "webappInfo.title": "Información de WebApp",
-    "webappInfo.key": "{key}",
-    "webappInfo.info": "{info}",
-    "webappInfo.details": "{details}",
-    "webRouteExample.title": "Ejemplo de ruta web",
-    "webRouteExample.path": "Ruta",
-    "webRouteExample.type": "Tipo",
-    "webRouteExample.permissions": "Permisos",
-    "webRouteExample.auth": "Autenticación",
-    "webRouteExample.controller": "Controlador",
-    "webRouteExample.router": "Enrutador",
-    "testWebSocket.title": "Probar WebSocket",
-    "testWebSocket.output": "Salida",
-    "testWebSocket.getTime": "Obtener hora",
-    "testWebSocket.randomMessage": "Mensaje aleatorio",
-    "testWebSocket.clientLists": "Listas de clientes",
-    "testWebSocket.clear": "Limpiar",
-    "navbar.toggleSidebar": "Alternar barra lateral",
-    "navbar.toggleNavigation": "Alternar navegación",
-    "languages.english": "Inglés",
-    "languages.persian": "Persa",
-    "languages.dutch": "Holandés",
-    "sidebar.home": "Inicio",
-    "sidebar.info": "Información",
-    "sidebar.formExample": "Ejemplo de formulario",
-    "sidebar.cookieExample": "Ejemplo de cookie",
-    "sidebar.routeExample": "Ejemplo de ruta",
-    "sidebar.socketExample": "Ejemplo de WebSocket",
-    "sidebar.emailExample": "Ejemplo de correo",
-    "sidebar.authExample": "Ejemplo de autenticación",
-    "sidebar.languageExample": "Ejemplo de idioma (i18n)",
-    "sidebar.debugExample": "Ejemplo de depuración",
-    "sidebar.errorExample": "Error",
-    "sidebar.dumpExample": "Volcar variables",
-    "sidebar.monogdbExample": "Ejemplo de MongoDB",
-    "database.test.title": "Probar base de datos (MongoDB)",
-    "database.table.header.title": "Título",
-    "database.table.header.slug": "Slug",
-    "database.table.header.action": "Acción",
-    "database.table.input.placeholder.title": "Introduce el título",
-    "database.table.button.add": "Agregar",
-    "pagination.showing": "Mostrando",
-    "pagination.to": "a",
-    "pagination.of": "de",
-    "pagination.entries": "entradas",
-    "sidebar.paginationExample": "Ejemplo de paginación",
-    "project.contributing": "Contribuir",
-    "project.documentation": "Documentación",
-    "project.github": "GitHub",
-    "error.field.required": "Este campo es obligatorio",
-    "error.field.email": "Dirección de correo electrónico no válida",
-    "error.field": "Valor no válido",
-    "error.field.min": "El valor debe ser mayor o igual a {0}",
-    "error.field.max": "El valor debe ser menor o igual a {0}",
-    "error.invalid.password": "La contraseña no es válida, debe tener [Número/Carácter (Mayúscula+Minúscula)/?@",
-    "testWebSocket.stream": "Video Stream",
-    "testWebSocket.stopStream": "Stop"
+  "dir": "ltr",
+  "example.params": "Mi nombre es {name}, mi edad es {age}",
+  "example.path": "Ruta de prueba de example.path para la localización",
+  "example.tstring": "Probar objetos TString para la internacionalización",
+  "logo": "WebApp",
+  "logo.title": "WebApp",
+  "pages.title": "Título",
+  "welcome.message": "Bienvenido a",
+  "features.title": "Características de WebApp",
+  "features.description": "WebApp te proporciona todo lo que necesitas para construir una aplicación web potente de la manera más sencilla posible utilizando el lenguaje Dart. Esta herramienta incluye un conjunto de funciones para crear una aplicación web rápida, ligera y robusta. A continuación, algunas de las características que ofrece:",
+  "features.websocket": "WebSocket",
+  "features.mongodb": "MongoDB",
+  "features.cronjobs": "Tareas programadas (Cron Jobs)",
+  "features.routing": "Enrutamiento",
+  "features.formvalidators": "Validadores de formularios",
+  "features.htmltools": "Herramientas para el desarrollo rápido de páginas HTML",
+  "features.dbmodel": "Creación de modelos de base de datos",
+  "features.fastapi": "Desarrollo rápido de API con documentación OpenAPI",
+  "features.other": "Y muchas otras características que exploraremos en los ejemplos.",
+  "login.success": "Inicio de sesión exitoso",
+  "auth.test": "Probar autenticación",
+  "auth.welcome": "Bienvenido,",
+  "auth.logout": "Cerrar sesión",
+  "auth.routeExample": "Ejemplo de ruta que requiere autenticación",
+  "auth.logoutRoute": "Ejemplo de ruta para cerrar sesión",
+  "cookies.test": "Probar cookies",
+  "cookies.key": "Clave",
+  "cookies.value": "Valor",
+  "cookies.action": "Acción",
+  "cookies.placeholder.name": "Nombre de la cookie",
+  "cookies.placeholder.value": "Valor de la cookie",
+  "cookies.safe": "Seguro",
+  "cookies.add": "Agregar",
+  "cookies.remove": "Eliminar cookie",
+  "cookies.addCookie": "Agregar cookie",
+  "auth.view": "Ver",
+  "auth.controller": "Controlador",
+  "auth.authController": "Controlador de autenticación",
+  "auth.router": "Enrutador",
+  "email.test": "Probar correo electrónico",
+  "email.from": "De",
+  "email.fromName": "Tu nombre",
+  "email.to": "Para",
+  "email.subject": "Asunto",
+  "email.message": "Mensaje",
+  "email.host": "Servidor",
+  "email.port": "Puerto",
+  "email.username": "Nombre de usuario",
+  "email.password": "Contraseña",
+  "email.allowInsecure": "Permitir inseguro",
+  "email.ssl": "SSL",
+  "email.success": "¡Correo enviado con éxito!",
+  "email.failed": "No se pudo enviar el correo.",
+  "email.send": "Enviar correo electrónico",
+  "email.placeholder.name": "Ingresa tu nombre",
+  "email.placeholder.to": "Ingresa la dirección de correo del destinatario",
+  "email.placeholder.subject": "Ingresa el asunto",
+  "email.placeholder.message": "Ingresa el mensaje",
+  "email.placeholder.host": "Ingresa el nombre del servidor",
+  "email.placeholder.port": "Ingresa el número de puerto",
+  "email.placeholder.username": "Ingresa el nombre de usuario",
+  "email.placeholder.password": "Ingresa la contraseña",
+  "form.validation.title": "Probar validación de formulario",
+  "form.validation.credentials.email": "Correo electrónico",
+  "form.validation.credentials.password": "Contraseña",
+  "form.validation.email": "Dirección de correo electrónico",
+  "form.validation.emailPlaceholder": "Ingresa tu correo electrónico",
+  "form.validation.password": "Contraseña",
+  "form.validation.passwordPlaceholder": "Ingresa tu contraseña",
+  "form.validation.login": "Iniciar sesión",
+  "form.validation.loginError": "Error de inicio de sesión",
+  "form.validation.loginSuccess": "¡Inicio de sesión exitoso! Bienvenido",
+  "form.validation.logout": "Cerrar sesión",
+  "form.validation.view": "Ver",
+  "form.validation.controller": "Controlador",
+  "i18n.title": "Probar idioma (i18n)",
+  "i18n.language.english": "Inglés",
+  "i18n.language.persian": "Persa",
+  "i18n.language.dutch": "Holandés",
+  "i18n.exampleTString": "Ejemplo de TString",
+  "i18n.examplePath": "Ruta de ejemplo",
+  "i18n.examplePathString": "Cadena de ruta de ejemplo",
+  "i18n.exampleParams": "Hola, mi nombre es {name} y tengo {age} años.",
+  "i18n.view": "Ver",
+  "i18n.controller": "Controlador",
+  "i18n.languagesDirectory": "Directorio de idiomas",
+  "webappInfo.title": "Información de WebApp",
+  "webappInfo.key": "{key}",
+  "webappInfo.info": "{info}",
+  "webappInfo.details": "{details}",
+  "webRouteExample.title": "Ejemplo de ruta web",
+  "webRouteExample.path": "Ruta",
+  "webRouteExample.type": "Tipo",
+  "webRouteExample.permissions": "Permisos",
+  "webRouteExample.auth": "Autenticación",
+  "webRouteExample.controller": "Controlador",
+  "webRouteExample.router": "Enrutador",
+  "testWebSocket.title": "Probar WebSocket",
+  "testWebSocket.output": "Salida",
+  "testWebSocket.getTime": "Obtener hora",
+  "testWebSocket.randomMessage": "Mensaje aleatorio",
+  "testWebSocket.clientLists": "Listas de clientes",
+  "testWebSocket.clear": "Limpiar",
+  "navbar.toggleSidebar": "Alternar barra lateral",
+  "navbar.toggleNavigation": "Alternar navegación",
+  "languages.english": "Inglés",
+  "languages.persian": "Persa",
+  "languages.dutch": "Holandés",
+  "sidebar.home": "Inicio",
+  "sidebar.info": "Información",
+  "sidebar.formExample": "Ejemplo de formulario",
+  "sidebar.cookieExample": "Ejemplo de cookie",
+  "sidebar.routeExample": "Ejemplo de ruta",
+  "sidebar.socketExample": "Ejemplo de WebSocket",
+  "sidebar.emailExample": "Ejemplo de correo",
+  "sidebar.authExample": "Ejemplo de autenticación",
+  "sidebar.languageExample": "Ejemplo de idioma (i18n)",
+  "sidebar.debugExample": "Ejemplo de depuración",
+  "sidebar.errorExample": "Error",
+  "sidebar.dumpExample": "Volcar variables",
+  "sidebar.monogdbExample": "Ejemplo de MongoDB",
+  "database.test.title": "Probar base de datos (MongoDB)",
+  "database.table.header.title": "Título",
+  "database.table.header.slug": "Slug",
+  "database.table.header.action": "Acción",
+  "database.table.input.placeholder.title": "Introduce el título",
+  "database.table.button.add": "Agregar",
+  "pagination.showing": "Mostrando",
+  "pagination.to": "a",
+  "pagination.of": "de",
+  "pagination.entries": "entradas",
+  "sidebar.paginationExample": "Ejemplo de paginación",
+  "project.contributing": "Contribuir",
+  "project.documentation": "Documentación",
+  "project.github": "GitHub",
+  "error.field.required": "Este campo es obligatorio",
+  "error.field.email": "Dirección de correo electrónico no válida",
+  "error.field": "Valor no válido",
+  "error.field.min": "El valor debe ser mayor o igual a {0}",
+  "error.field.max": "El valor debe ser menor o igual a {0}",
+  "error.invalid.password": "La contraseña no es válida, debe tener [Número/Carácter (Mayúscula+Minúscula)/?@",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "testWebSocket.stream": "Video Stream",
+  "testWebSocket.stopStream": "Detener",
+  "error.field.relation": "El valor de este campo no es válido",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "Ejemplo MySQL",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "Título",
+  "mysql.table.header.author": "Autor",
+  "mysql.table.header.publishedDate": "Fecha de publicación",
+  "mysql.table.header.categoryId": "ID de categoría",
+  "mysql.table.header.actions": "Acciones",
+  "mysql.table.header.booksCount": "Cantidad de libros",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "Título",
+  "mysql.placeholder.author": "Autor",
+  "mysql.placeholder.publishedDate": "Fecha de publicación",
+  "mysql.filter.allCategories": "Todas las categorías",
+  "mysql.button.deleteSelected": "Eliminar seleccionados",
+  "mysql.button.update": "Actualizar",
+  "mysql.button.reset": "Restablecer",
+  "mysql.button.filter": "Filtrar",
+  "mysql.button.delete": "Eliminar",
+  "mysql.button.edit": "Editar",
+  "mysql.message.deleteSelectedBooks": "¿Está seguro de que desea eliminar los libros seleccionados?",
+  "mysql.message.noBooksSelected": "No se han seleccionado libros para eliminar.",
+  "mysql.message.deleteBook": "¿Está seguro de que desea eliminar este libro?",
+  "mysql.message.deleteCategory": "¿Está seguro de que desea eliminar esta categoría?",
+  "mysql.message.noRecords": "No se encontraron registros",
+  "mysql.message.noCategories": "No se encontraron categorías",
+  "mysql.categories.title": "Categorías de ejemplo MySQL",
+  "sidebar.mongo": "Ejemplo de MongoDB",
+  "person.example.title": "Ejemplo de Persona",
+  "person.table.header.name": "Nombre",
+  "person.table.header.age": "Edad",
+  "person.table.header.married": "Casado",
+  "person.table.header.email": "Correo electrónico",
+  "person.table.header.height": "Altura",
+  "person.table.header.birthday": "Cumpleaños",
+  "person.table.header.job": "Trabajo",
+  "person.table.header.skills": "Habilidades",
+  "person.table.header.action": "Acción",
+  "person.table.empty": "No se encontraron personas.",
+  "database.table.empty": "No se encontraron registros",
+  "person.form.label.name": "Nombre",
+  "person.form.placeholder.name": "Ingrese su nombre",
+  "person.form.label.email": "Correo electrónico",
+  "person.form.placeholder.email": "Ingrese su correo electrónico",
+  "person.form.label.age": "Edad",
+  "person.form.placeholder.age": "Ingrese su edad",
+  "person.form.label.birthday": "Cumpleaños",
+  "person.form.label.height": "Altura",
+  "person.form.placeholder.height": "Ingrese su altura",
+  "person.form.label.job_title": "Puesto de trabajo",
+  "person.form.option.select_job": "Seleccionar trabajo",
+  "person.form.label.skills": "Habilidades",
+  "person.form.label.password": "Contraseña",
+  "person.form.placeholder.password": "Ingrese contraseña",
+  "person.form.label.gender": "Género",
+  "person.form.gender.dont_ask": "¡No me preguntes!",
+  "person.form.gender.male": "Masculino",
+  "person.form.gender.female": "Femenino",
+  "person.form.gender.other": "Otro",
+  "person.form.label.married": "Casado",
+  "person.form.married.yes": "Sí",
+  "person.form.married.no": "No",
+  "person.form.label.color": "Color",
+  "person.form.tooltip.color": "Elija su color",
+  "person.form.button.submit": "Enviar",
+  "person.form.button.cancel": "Cancelar"
 }
