--- a/example/lib/languages/fr.json
+++ b/example/lib/languages/fr.json
@@ -1,145 +1,213 @@
 {
-    "dir": "ltr",
-    "example.params": "Mon nom est {name}, mon âge est {age}",
-    "example.path": "Chemin de test de example.path pour la localisation",
-    "example.tstring": "Tester les objets TString pour l'internationalisation",
-    "logo": "WebApp",
-    "logo.title": "WebApp",
-    "pages.title": "Titre",
-    "welcome.message": "Bienvenue sur",
-    "features.title": "Fonctionnalités de WebApp",
-    "features.description": "WebApp vous fournit tout ce dont vous avez besoin pour créer une application web puissante de la manière la plus simple possible en utilisant le langage Dart. Cet outil comprend un ensemble de fonctionnalités pour créer une application web rapide, légère et robuste. Voici certaines des fonctionnalités qu'il offre :",
-    "features.websocket": "WebSocket",
-    "features.mongodb": "MongoDB",
-    "features.cronjobs": "Tâches planifiées (Cron Jobs)",
-    "features.routing": "Routage",
-    "features.formvalidators": "Validateurs de formulaires",
-    "features.htmltools": "Outils pour un développement rapide de pages HTML",
-    "features.dbmodel": "Création de modèle de base de données",
-    "features.fastapi": "Développement rapide d'API avec documentation OpenAPI",
-    "features.other": "Et bien d'autres fonctionnalités que nous explorerons dans les exemples.",
-    "login.success": "Connexion réussie",
-    "auth.test": "Tester l'authentification",
-    "auth.welcome": "Bienvenue,",
-    "auth.logout": "Déconnexion",
-    "auth.routeExample": "Exemple de route nécessitant une authentification",
-    "auth.logoutRoute": "Exemple de route pour la déconnexion",
-    "cookies.test": "Tester les cookies",
-    "cookies.key": "Clé",
-    "cookies.value": "Valeur",
-    "cookies.action": "Action",
-    "cookies.placeholder.name": "Nom du cookie",
-    "cookies.placeholder.value": "Valeur du cookie",
-    "cookies.safe": "Sécurisé",
-    "cookies.add": "Ajouter",
-    "cookies.remove": "Supprimer le cookie",
-    "cookies.addCookie": "Ajouter un cookie",
-    "auth.view": "Voir",
-    "auth.controller": "Contrôleur",
-    "auth.authController": "Contrôleur d'authentification",
-    "auth.router": "Routeur",
-    "email.test": "Tester l'email",
-    "email.from": "De",
-    "email.fromName": "Votre nom",
-    "email.to": "À",
-    "email.subject": "Objet",
-    "email.message": "Message",
-    "email.host": "Hôte",
-    "email.port": "Port",
-    "email.username": "Nom d'utilisateur",
-    "email.password": "Mot de passe",
-    "email.allowInsecure": "Autoriser non sécurisé",
-    "email.ssl": "SSL",
-    "email.success": "Email envoyé avec succès !",
-    "email.failed": "Échec de l'envoi de l'email.",
-    "email.send": "Envoyer l'email",
-    "email.placeholder.name": "Entrez votre nom",
-    "email.placeholder.to": "Entrez l'adresse email du destinataire",
-    "email.placeholder.subject": "Entrez l'objet",
-    "email.placeholder.message": "Entrez le message",
-    "email.placeholder.host": "Entrez le nom de l'hôte",
-    "email.placeholder.port": "Entrez le numéro de port",
-    "email.placeholder.username": "Entrez le nom d'utilisateur",
-    "email.placeholder.password": "Entrez le mot de passe",
-    "form.validation.title": "Tester la validation de formulaire",
-    "form.validation.credentials.email": "Email",
-    "form.validation.credentials.password": "Mot de passe",
-    "form.validation.email": "Adresse email",
-    "form.validation.emailPlaceholder": "Entrez votre email",
-    "form.validation.password": "Mot de passe",
-    "form.validation.passwordPlaceholder": "Entrez votre mot de passe",
-    "form.validation.login": "Connexion",
-    "form.validation.loginError": "Erreur de connexion",
-    "form.validation.loginSuccess": "Connexion réussie ! Bienvenue",
-    "form.validation.logout": "Déconnexion",
-    "form.validation.view": "Voir",
-    "form.validation.controller": "Contrôleur",
-    "i18n.title": "Tester la langue (i18n)",
-    "i18n.language.english": "Anglais",
-    "i18n.language.persian": "Persan",
-    "i18n.language.dutch": "Néerlandais",
-    "i18n.exampleTString": "Exemple TString",
-    "i18n.examplePath": "Exemple de chemin",
-    "i18n.examplePathString": "Exemple de chaîne de chemin",
-    "i18n.exampleParams": "Bonjour, mon nom est {name} et j'ai {age} ans.",
-    "i18n.view": "Voir",
-    "i18n.controller": "Contrôleur",
-    "i18n.languagesDirectory": "Répertoire des langues",
-    "webappInfo.title": "Infos WebApp",
-    "webappInfo.key": "{key}",
-    "webappInfo.info": "{info}",
-    "webappInfo.details": "{details}",
-    "webRouteExample.title": "Exemple de route web",
-    "webRouteExample.path": "Chemin",
-    "webRouteExample.type": "Type",
-    "webRouteExample.permissions": "Autorisations",
-    "webRouteExample.auth": "Authentification",
-    "webRouteExample.controller": "Contrôleur",
-    "webRouteExample.router": "Routeur",
-    "testWebSocket.title": "Tester WebSocket",
-    "testWebSocket.output": "Sortie",
-    "testWebSocket.getTime": "Obtenir l'heure",
-    "testWebSocket.randomMessage": "Message aléatoire",
-    "testWebSocket.clientLists": "Listes des clients",
-    "testWebSocket.clear": "Effacer",
-    "navbar.toggleSidebar": "Basculer la barre latérale",
-    "navbar.toggleNavigation": "Basculer la navigation",
-    "languages.english": "Anglais",
-    "languages.persian": "Persan",
-    "languages.dutch": "Néerlandais",
-    "sidebar.home": "Accueil",
-    "sidebar.info": "Info",
-    "sidebar.formExample": "Exemple de formulaire",
-    "sidebar.cookieExample": "Exemple de cookie",
-    "sidebar.routeExample": "Exemple de route",
-    "sidebar.socketExample": "Exemple de WebSocket",
-    "sidebar.emailExample": "Exemple d'email",
-    "sidebar.authExample": "Exemple d'authentification",
-    "sidebar.languageExample": "Exemple de langue (i18n)",
-    "sidebar.debugExample": "Exemple de débogage",
-    "sidebar.errorExample": "Erreur",
-    "sidebar.dumpExample": "Afficher les variables",
-    "sidebar.monogdbExample": "Exemple MongoDB",
-    "database.test.title": "Tester la base de données (MongoDB)",
-    "database.table.header.title": "Titre",
-    "database.table.header.slug": "Slug",
-    "database.table.header.action": "Action",
-    "database.table.input.placeholder.title": "Entrez le titre",
-    "database.table.button.add": "Ajouter",
-    "pagination.showing": "Affichage de",
-    "pagination.to": "à",
-    "pagination.of": "sur",
-    "pagination.entries": "entrées",
-    "sidebar.paginationExample": "Exemple de pagination",
-    "project.contributing": "Contribuer",
-    "project.documentation": "Documentation",
-    "project.github": "GitHub",
-    "error.field.required": "Ce champ est requis",
-    "error.field.email": "Adresse e-mail invalide",
-    "error.field": "Valeur incorrecte",
-    "error.field.min": "La valeur doit être supérieure ou égale à {0}",
-    "error.field.max": "La valeur doit être inférieure ou égale à {0}",
-    "error.invalid.password": "Le mot de passe n'est pas valide, il doit contenir [Numéro/Caractère (Majuscule+Minuscule)/?@",
-    "testWebSocket.stream": "Video Stream",
-    "testWebSocket.stopStream": "Stop"
+  "dir": "ltr",
+  "example.params": "Mon nom est {name}, mon âge est {age}",
+  "example.path": "Chemin de test de example.path pour la localisation",
+  "example.tstring": "Tester les objets TString pour l'internationalisation",
+  "logo": "WebApp",
+  "logo.title": "WebApp",
+  "pages.title": "Titre",
+  "welcome.message": "Bienvenue sur",
+  "features.title": "Fonctionnalités de WebApp",
+  "features.description": "WebApp vous fournit tout ce dont vous avez besoin pour créer une application web puissante de la manière la plus simple possible en utilisant le langage Dart. Cet outil comprend un ensemble de fonctionnalités pour créer une application web rapide, légère et robuste. Voici certaines des fonctionnalités qu'il offre :",
+  "features.websocket": "WebSocket",
+  "features.mongodb": "MongoDB",
+  "features.cronjobs": "Tâches planifiées (Cron Jobs)",
+  "features.routing": "Routage",
+  "features.formvalidators": "Validateurs de formulaires",
+  "features.htmltools": "Outils pour un développement rapide de pages HTML",
+  "features.dbmodel": "Création de modèle de base de données",
+  "features.fastapi": "Développement rapide d'API avec documentation OpenAPI",
+  "features.other": "Et bien d'autres fonctionnalités que nous explorerons dans les exemples.",
+  "login.success": "Connexion réussie",
+  "auth.test": "Tester l'authentification",
+  "auth.welcome": "Bienvenue,",
+  "auth.logout": "Déconnexion",
+  "auth.routeExample": "Exemple de route nécessitant une authentification",
+  "auth.logoutRoute": "Exemple de route pour la déconnexion",
+  "cookies.test": "Tester les cookies",
+  "cookies.key": "Clé",
+  "cookies.value": "Valeur",
+  "cookies.action": "Action",
+  "cookies.placeholder.name": "Nom du cookie",
+  "cookies.placeholder.value": "Valeur du cookie",
+  "cookies.safe": "Sécurisé",
+  "cookies.add": "Ajouter",
+  "cookies.remove": "Supprimer le cookie",
+  "cookies.addCookie": "Ajouter un cookie",
+  "auth.view": "Voir",
+  "auth.controller": "Contrôleur",
+  "auth.authController": "Contrôleur d'authentification",
+  "auth.router": "Routeur",
+  "email.test": "Tester l'email",
+  "email.from": "De",
+  "email.fromName": "Votre nom",
+  "email.to": "À",
+  "email.subject": "Objet",
+  "email.message": "Message",
+  "email.host": "Hôte",
+  "email.port": "Port",
+  "email.username": "Nom d'utilisateur",
+  "email.password": "Mot de passe",
+  "email.allowInsecure": "Autoriser non sécurisé",
+  "email.ssl": "SSL",
+  "email.success": "Email envoyé avec succès !",
+  "email.failed": "Échec de l'envoi de l'email.",
+  "email.send": "Envoyer l'email",
+  "email.placeholder.name": "Entrez votre nom",
+  "email.placeholder.to": "Entrez l'adresse email du destinataire",
+  "email.placeholder.subject": "Entrez l'objet",
+  "email.placeholder.message": "Entrez le message",
+  "email.placeholder.host": "Entrez le nom de l'hôte",
+  "email.placeholder.port": "Entrez le numéro de port",
+  "email.placeholder.username": "Entrez le nom d'utilisateur",
+  "email.placeholder.password": "Entrez le mot de passe",
+  "form.validation.title": "Tester la validation de formulaire",
+  "form.validation.credentials.email": "Email",
+  "form.validation.credentials.password": "Mot de passe",
+  "form.validation.email": "Adresse email",
+  "form.validation.emailPlaceholder": "Entrez votre email",
+  "form.validation.password": "Mot de passe",
+  "form.validation.passwordPlaceholder": "Entrez votre mot de passe",
+  "form.validation.login": "Connexion",
+  "form.validation.loginError": "Erreur de connexion",
+  "form.validation.loginSuccess": "Connexion réussie ! Bienvenue",
+  "form.validation.logout": "Déconnexion",
+  "form.validation.view": "Voir",
+  "form.validation.controller": "Contrôleur",
+  "i18n.title": "Tester la langue (i18n)",
+  "i18n.language.english": "Anglais",
+  "i18n.language.persian": "Persan",
+  "i18n.language.dutch": "Néerlandais",
+  "i18n.exampleTString": "Exemple TString",
+  "i18n.examplePath": "Exemple de chemin",
+  "i18n.examplePathString": "Exemple de chaîne de chemin",
+  "i18n.exampleParams": "Bonjour, mon nom est {name} et j'ai {age} ans.",
+  "i18n.view": "Voir",
+  "i18n.controller": "Contrôleur",
+  "i18n.languagesDirectory": "Répertoire des langues",
+  "webappInfo.title": "Infos WebApp",
+  "webappInfo.key": "{key}",
+  "webappInfo.info": "{info}",
+  "webappInfo.details": "{details}",
+  "webRouteExample.title": "Exemple de route web",
+  "webRouteExample.path": "Chemin",
+  "webRouteExample.type": "Type",
+  "webRouteExample.permissions": "Autorisations",
+  "webRouteExample.auth": "Authentification",
+  "webRouteExample.controller": "Contrôleur",
+  "webRouteExample.router": "Routeur",
+  "testWebSocket.title": "Tester WebSocket",
+  "testWebSocket.output": "Sortie",
+  "testWebSocket.getTime": "Obtenir l'heure",
+  "testWebSocket.randomMessage": "Message aléatoire",
+  "testWebSocket.clientLists": "Listes des clients",
+  "testWebSocket.clear": "Effacer",
+  "navbar.toggleSidebar": "Basculer la barre latérale",
+  "navbar.toggleNavigation": "Basculer la navigation",
+  "languages.english": "Anglais",
+  "languages.persian": "Persan",
+  "languages.dutch": "Néerlandais",
+  "sidebar.home": "Accueil",
+  "sidebar.info": "Info",
+  "sidebar.formExample": "Exemple de formulaire",
+  "sidebar.cookieExample": "Exemple de cookie",
+  "sidebar.routeExample": "Exemple de route",
+  "sidebar.socketExample": "Exemple de WebSocket",
+  "sidebar.emailExample": "Exemple d'email",
+  "sidebar.authExample": "Exemple d'authentification",
+  "sidebar.languageExample": "Exemple de langue (i18n)",
+  "sidebar.debugExample": "Exemple de débogage",
+  "sidebar.errorExample": "Erreur",
+  "sidebar.dumpExample": "Afficher les variables",
+  "sidebar.monogdbExample": "Exemple MongoDB",
+  "database.test.title": "Tester la base de données (MongoDB)",
+  "database.table.header.title": "Titre",
+  "database.table.header.slug": "Slug",
+  "database.table.header.action": "Action",
+  "database.table.input.placeholder.title": "Entrez le titre",
+  "database.table.button.add": "Ajouter",
+  "pagination.showing": "Affichage de",
+  "pagination.to": "à",
+  "pagination.of": "sur",
+  "pagination.entries": "entrées",
+  "sidebar.paginationExample": "Exemple de pagination",
+  "project.contributing": "Contribuer",
+  "project.documentation": "Documentation",
+  "project.github": "GitHub",
+  "error.field.required": "Ce champ est requis",
+  "error.field.email": "Adresse e-mail invalide",
+  "error.field": "Valeur incorrecte",
+  "error.field.min": "La valeur doit être supérieure ou égale à {0}",
+  "error.field.max": "La valeur doit être inférieure ou égale à {0}",
+  "error.invalid.password": "Le mot de passe n'est pas valide, il doit contenir [Numéro/Caractère (Majuscule+Minuscule)/?@",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "testWebSocket.stream": "Video Stream",
+  "testWebSocket.stopStream": "Stop",
+  "error.field.relation": "La valeur de ce champ n'est pas valide",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "Exemple MySQL",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "Titre",
+  "mysql.table.header.author": "Auteur",
+  "mysql.table.header.publishedDate": "Date de publication",
+  "mysql.table.header.categoryId": "ID de catégorie",
+  "mysql.table.header.actions": "Actions",
+  "mysql.table.header.booksCount": "Nombre de livres",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "Titre",
+  "mysql.placeholder.author": "Auteur",
+  "mysql.placeholder.publishedDate": "Date de publication",
+  "mysql.filter.allCategories": "Toutes les catégories",
+  "mysql.button.deleteSelected": "Supprimer sélectionnés",
+  "mysql.button.update": "Mettre à jour",
+  "mysql.button.reset": "Réinitialiser",
+  "mysql.button.filter": "Filtrer",
+  "mysql.button.delete": "Supprimer",
+  "mysql.button.edit": "Modifier",
+  "mysql.message.deleteSelectedBooks": "Êtes-vous sûr de vouloir supprimer les livres sélectionnés?",
+  "mysql.message.noBooksSelected": "Aucun livre sélectionné pour la suppression.",
+  "mysql.message.deleteBook": "Êtes-vous sûr de vouloir supprimer ce livre?",
+  "mysql.message.deleteCategory": "Êtes-vous sûr de vouloir supprimer cette catégorie?",
+  "mysql.message.noRecords": "Aucun enregistrement trouvé",
+  "mysql.message.noCategories": "Aucune catégorie trouvée",
+  "mysql.categories.title": "Catégories d'exemple MySQL",
+  "sidebar.mongo": "Exemple MongoDB",
+  "person.example.title": "Exemple de Personne",
+  "person.table.header.name": "Nom",
+  "person.table.header.age": "Âge",
+  "person.table.header.married": "Marié",
+  "person.table.header.email": "Email",
+  "person.table.header.height": "Taille",
+  "person.table.header.birthday": "Date de naissance",
+  "person.table.header.job": "Emploi",
+  "person.table.header.skills": "Compétences",
+  "person.table.header.action": "Action",
+  "person.table.empty": "Aucune personne trouvée.",
+  "database.table.empty": "Aucun enregistrement trouvé",
+  "person.form.label.name": "Nom",
+  "person.form.placeholder.name": "Entrez votre nom",
+  "person.form.label.email": "Email",
+  "person.form.placeholder.email": "Entrez votre email",
+  "person.form.label.age": "Âge",
+  "person.form.placeholder.age": "Entrez votre âge",
+  "person.form.label.birthday": "Date de naissance",
+  "person.form.label.height": "Taille",
+  "person.form.placeholder.height": "Entrez votre taille",
+  "person.form.label.job_title": "Intitulé du poste",
+  "person.form.option.select_job": "Sélectionnez un emploi",
+  "person.form.label.skills": "Compétences",
+  "person.form.label.password": "Mot de passe",
+  "person.form.placeholder.password": "Entrez votre mot de passe",
+  "person.form.label.gender": "Genre",
+  "person.form.gender.dont_ask": "Ne me demandez pas !",
+  "person.form.gender.male": "Masculin",
+  "person.form.gender.female": "Féminin",
+  "person.form.gender.other": "Autre",
+  "person.form.label.married": "Marié",
+  "person.form.married.yes": "Oui",
+  "person.form.married.no": "Non",
+  "person.form.label.color": "Couleur",
+  "person.form.tooltip.color": "Choisissez votre couleur",
+  "person.form.button.submit": "Soumettre",
+  "person.form.button.cancel": "Annuler"
 }
