--- a/example/lib/languages/it.json
+++ b/example/lib/languages/it.json
@@ -1,145 +1,213 @@
 {
-    "dir": "ltr",
-    "example.params": "Mi chiamo {name}, la mia età è {age}",
-    "example.path": "Percorso di test di example.path per la localizzazione",
-    "example.tstring": "Testare gli oggetti TString per l'internazionalizzazione",
-    "logo": "WebApp",
-    "logo.title": "WebApp",
-    "pages.title": "Titolo",
-    "welcome.message": "Benvenuto su",
-    "features.title": "Funzionalità di WebApp",
-    "features.description": "WebApp ti fornisce tutto ciò di cui hai bisogno per costruire un'applicazione web potente nel modo più semplice possibile utilizzando il linguaggio Dart. Questo strumento include una serie di funzionalità per creare un'app web veloce, leggera e robusta. Ecco alcune delle funzionalità offerte:",
-    "features.websocket": "WebSocket",
-    "features.mongodb": "MongoDB",
-    "features.cronjobs": "Cron Jobs",
-    "features.routing": "Routing",
-    "features.formvalidators": "Validatori di moduli",
-    "features.htmltools": "Strumenti per lo sviluppo rapido di pagine HTML",
-    "features.dbmodel": "Creazione di modelli di database",
-    "features.fastapi": "Sviluppo rapido di API con documentazione OpenAPI",
-    "features.other": "E molte altre funzionalità, che esploreremo negli esempi.",
-    "login.success": "Accesso effettuato con successo",
-    "auth.test": "Testare l'autenticazione",
-    "auth.welcome": "Benvenuto,",
-    "auth.logout": "Disconnetti",
-    "auth.routeExample": "Esempio di percorso che richiede autenticazione",
-    "auth.logoutRoute": "Esempio di percorso di logout",
-    "cookies.test": "Testare i cookie",
-    "cookies.key": "Chiave",
-    "cookies.value": "Valore",
-    "cookies.action": "Azione",
-    "cookies.placeholder.name": "Nome del cookie",
-    "cookies.placeholder.value": "Valore del cookie",
-    "cookies.safe": "Sicuro",
-    "cookies.add": "Aggiungi",
-    "cookies.remove": "Rimuovi cookie",
-    "cookies.addCookie": "Aggiungi cookie",
-    "auth.view": "Visualizza",
-    "auth.controller": "Controller",
-    "auth.authController": "Controller di autenticazione",
-    "auth.router": "Router",
-    "email.test": "Testare l'email",
-    "email.from": "Da",
-    "email.fromName": "Il tuo nome",
-    "email.to": "A",
-    "email.subject": "Oggetto",
-    "email.message": "Messaggio",
-    "email.host": "Host",
-    "email.port": "Porta",
-    "email.username": "Nome utente",
-    "email.password": "Password",
-    "email.allowInsecure": "Permetti non sicuro",
-    "email.ssl": "SSL",
-    "email.success": "Email inviata con successo!",
-    "email.failed": "Invio dell'email fallito.",
-    "email.send": "Invia email",
-    "email.placeholder.name": "Inserisci il tuo nome",
-    "email.placeholder.to": "Inserisci l'indirizzo email del destinatario",
-    "email.placeholder.subject": "Inserisci l'oggetto",
-    "email.placeholder.message": "Inserisci il messaggio",
-    "email.placeholder.host": "Inserisci il nome dell'host",
-    "email.placeholder.port": "Inserisci il numero di porta",
-    "email.placeholder.username": "Inserisci il nome utente",
-    "email.placeholder.password": "Inserisci la password",
-    "form.validation.title": "Testare la validazione del modulo",
-    "form.validation.credentials.email": "Email",
-    "form.validation.credentials.password": "Password",
-    "form.validation.email": "Indirizzo email",
-    "form.validation.emailPlaceholder": "Inserisci il tuo email",
-    "form.validation.password": "Password",
-    "form.validation.passwordPlaceholder": "Inserisci la tua password",
-    "form.validation.login": "Accedi",
-    "form.validation.loginError": "Errore di accesso",
-    "form.validation.loginSuccess": "Accesso effettuato con successo! Benvenuto",
-    "form.validation.logout": "Disconnetti",
-    "form.validation.view": "Visualizza",
-    "form.validation.controller": "Controller",
-    "i18n.title": "Testare la lingua (i18n)",
-    "i18n.language.english": "Inglese",
-    "i18n.language.persian": "Persiano",
-    "i18n.language.dutch": "Olandese",
-    "i18n.exampleTString": "Esempio TString",
-    "i18n.examplePath": "Esempio di percorso",
-    "i18n.examplePathString": "Esempio di stringa di percorso",
-    "i18n.exampleParams": "Ciao, mi chiamo {name} e ho {age} anni.",
-    "i18n.view": "Visualizza",
-    "i18n.controller": "Controller",
-    "i18n.languagesDirectory": "Directory delle lingue",
-    "webappInfo.title": "Informazioni su WebApp",
-    "webappInfo.key": "{key}",
-    "webappInfo.info": "{info}",
-    "webappInfo.details": "{details}",
-    "webRouteExample.title": "Esempio di percorso web",
-    "webRouteExample.path": "Percorso",
-    "webRouteExample.type": "Tipo",
-    "webRouteExample.permissions": "Permessi",
-    "webRouteExample.auth": "Autenticazione",
-    "webRouteExample.controller": "Controller",
-    "webRouteExample.router": "Router",
-    "testWebSocket.title": "Testare WebSocket",
-    "testWebSocket.output": "Output",
-    "testWebSocket.getTime": "Ottieni l'ora",
-    "testWebSocket.randomMessage": "Messaggio casuale",
-    "testWebSocket.clientLists": "Liste dei client",
-    "testWebSocket.clear": "Cancella",
-    "navbar.toggleSidebar": "Attiva/disattiva barra laterale",
-    "navbar.toggleNavigation": "Attiva/disattiva navigazione",
-    "languages.english": "Inglese",
-    "languages.persian": "Persiano",
-    "languages.dutch": "Olandese",
-    "sidebar.home": "Home",
-    "sidebar.info": "Info",
-    "sidebar.formExample": "Esempio di modulo",
-    "sidebar.cookieExample": "Esempio di cookie",
-    "sidebar.routeExample": "Esempio di percorso",
-    "sidebar.socketExample": "Esempio di WebSocket",
-    "sidebar.emailExample": "Esempio di email",
-    "sidebar.authExample": "Esempio di autenticazione",
-    "sidebar.languageExample": "Esempio di lingua (i18n)",
-    "sidebar.debugExample": "Esempio di debug",
-    "sidebar.errorExample": "Errore",
-    "sidebar.dumpExample": "Dump di variabili",
-    "sidebar.monogdbExample": "Esempio MongoDB",
-    "database.test.title": "Testare il database (MongoDB)",
-    "database.table.header.title": "Titolo",
-    "database.table.header.slug": "Slug",
-    "database.table.header.action": "Azione",
-    "database.table.input.placeholder.title": "Inserisci il titolo",
-    "database.table.button.add": "Aggiungi",
-    "pagination.showing": "Visualizzazione di",
-    "pagination.to": "a",
-    "pagination.of": "di",
-    "pagination.entries": "voci",
-    "sidebar.paginationExample": "Esempio di paginazione",
-    "project.contributing": "Contribuire",
-    "project.documentation": "Documentazione",
-    "project.github": "GitHub",
-    "error.field.required": "Questo campo è obbligatorio",
-    "error.field.email": "Indirizzo email non valido",
-    "error.field": "Valore non valido",
-    "error.field.min": "Il valore deve essere maggiore o uguale a {0}",
-    "error.field.max": "Il valore deve essere minore o uguale a {0}",
-    "error.invalid.password": "La password non è valida, deve contenere [Numero/Carattere (Maiuscolo+Minuscolo)/?@",
-    "testWebSocket.stream": "Video Stream",
-    "testWebSocket.stopStream": "Stop"
+  "dir": "ltr",
+  "example.params": "Mi chiamo {name}, la mia età è {age}",
+  "example.path": "Percorso di test di example.path per la localizzazione",
+  "example.tstring": "Testare gli oggetti TString per l'internazionalizzazione",
+  "logo": "WebApp",
+  "logo.title": "WebApp",
+  "pages.title": "Titolo",
+  "welcome.message": "Benvenuto su",
+  "features.title": "Funzionalità di WebApp",
+  "features.description": "WebApp ti fornisce tutto ciò di cui hai bisogno per costruire un'applicazione web potente nel modo più semplice possibile utilizzando il linguaggio Dart. Questo strumento include una serie di funzionalità per creare un'app web veloce, leggera e robusta. Ecco alcune delle funzionalità offerte:",
+  "features.websocket": "WebSocket",
+  "features.mongodb": "MongoDB",
+  "features.cronjobs": "Cron Jobs",
+  "features.routing": "Routing",
+  "features.formvalidators": "Validatori di moduli",
+  "features.htmltools": "Strumenti per lo sviluppo rapido di pagine HTML",
+  "features.dbmodel": "Creazione di modelli di database",
+  "features.fastapi": "Sviluppo rapido di API con documentazione OpenAPI",
+  "features.other": "E molte altre funzionalità, che esploreremo negli esempi.",
+  "login.success": "Accesso effettuato con successo",
+  "auth.test": "Testare l'autenticazione",
+  "auth.welcome": "Benvenuto,",
+  "auth.logout": "Disconnetti",
+  "auth.routeExample": "Esempio di percorso che richiede autenticazione",
+  "auth.logoutRoute": "Esempio di percorso di logout",
+  "cookies.test": "Testare i cookie",
+  "cookies.key": "Chiave",
+  "cookies.value": "Valore",
+  "cookies.action": "Azione",
+  "cookies.placeholder.name": "Nome del cookie",
+  "cookies.placeholder.value": "Valore del cookie",
+  "cookies.safe": "Sicuro",
+  "cookies.add": "Aggiungi",
+  "cookies.remove": "Rimuovi cookie",
+  "cookies.addCookie": "Aggiungi cookie",
+  "auth.view": "Visualizza",
+  "auth.controller": "Controller",
+  "auth.authController": "Controller di autenticazione",
+  "auth.router": "Router",
+  "email.test": "Testare l'email",
+  "email.from": "Da",
+  "email.fromName": "Il tuo nome",
+  "email.to": "A",
+  "email.subject": "Oggetto",
+  "email.message": "Messaggio",
+  "email.host": "Host",
+  "email.port": "Porta",
+  "email.username": "Nome utente",
+  "email.password": "Password",
+  "email.allowInsecure": "Permetti non sicuro",
+  "email.ssl": "SSL",
+  "email.success": "Email inviata con successo!",
+  "email.failed": "Invio dell'email fallito.",
+  "email.send": "Invia email",
+  "email.placeholder.name": "Inserisci il tuo nome",
+  "email.placeholder.to": "Inserisci l'indirizzo email del destinatario",
+  "email.placeholder.subject": "Inserisci l'oggetto",
+  "email.placeholder.message": "Inserisci il messaggio",
+  "email.placeholder.host": "Inserisci il nome dell'host",
+  "email.placeholder.port": "Inserisci il numero di porta",
+  "email.placeholder.username": "Inserisci il nome utente",
+  "email.placeholder.password": "Inserisci la password",
+  "form.validation.title": "Testare la validazione del modulo",
+  "form.validation.credentials.email": "Email",
+  "form.validation.credentials.password": "Password",
+  "form.validation.email": "Indirizzo email",
+  "form.validation.emailPlaceholder": "Inserisci il tuo email",
+  "form.validation.password": "Password",
+  "form.validation.passwordPlaceholder": "Inserisci la tua password",
+  "form.validation.login": "Accedi",
+  "form.validation.loginError": "Errore di accesso",
+  "form.validation.loginSuccess": "Accesso effettuato con successo! Benvenuto",
+  "form.validation.logout": "Disconnetti",
+  "form.validation.view": "Visualizza",
+  "form.validation.controller": "Controller",
+  "i18n.title": "Testare la lingua (i18n)",
+  "i18n.language.english": "Inglese",
+  "i18n.language.persian": "Persiano",
+  "i18n.language.dutch": "Olandese",
+  "i18n.exampleTString": "Esempio TString",
+  "i18n.examplePath": "Esempio di percorso",
+  "i18n.examplePathString": "Esempio di stringa di percorso",
+  "i18n.exampleParams": "Ciao, mi chiamo {name} e ho {age} anni.",
+  "i18n.view": "Visualizza",
+  "i18n.controller": "Controller",
+  "i18n.languagesDirectory": "Directory delle lingue",
+  "webappInfo.title": "Informazioni su WebApp",
+  "webappInfo.key": "{key}",
+  "webappInfo.info": "{info}",
+  "webappInfo.details": "{details}",
+  "webRouteExample.title": "Esempio di percorso web",
+  "webRouteExample.path": "Percorso",
+  "webRouteExample.type": "Tipo",
+  "webRouteExample.permissions": "Permessi",
+  "webRouteExample.auth": "Autenticazione",
+  "webRouteExample.controller": "Controller",
+  "webRouteExample.router": "Router",
+  "testWebSocket.title": "Testare WebSocket",
+  "testWebSocket.output": "Output",
+  "testWebSocket.getTime": "Ottieni l'ora",
+  "testWebSocket.randomMessage": "Messaggio casuale",
+  "testWebSocket.clientLists": "Liste dei client",
+  "testWebSocket.clear": "Cancella",
+  "navbar.toggleSidebar": "Attiva/disattiva barra laterale",
+  "navbar.toggleNavigation": "Attiva/disattiva navigazione",
+  "languages.english": "Inglese",
+  "languages.persian": "Persiano",
+  "languages.dutch": "Olandese",
+  "sidebar.home": "Home",
+  "sidebar.info": "Info",
+  "sidebar.formExample": "Esempio di modulo",
+  "sidebar.cookieExample": "Esempio di cookie",
+  "sidebar.routeExample": "Esempio di percorso",
+  "sidebar.socketExample": "Esempio di WebSocket",
+  "sidebar.emailExample": "Esempio di email",
+  "sidebar.authExample": "Esempio di autenticazione",
+  "sidebar.languageExample": "Esempio di lingua (i18n)",
+  "sidebar.debugExample": "Esempio di debug",
+  "sidebar.errorExample": "Errore",
+  "sidebar.dumpExample": "Dump di variabili",
+  "sidebar.monogdbExample": "Esempio MongoDB",
+  "database.test.title": "Testare il database (MongoDB)",
+  "database.table.header.title": "Titolo",
+  "database.table.header.slug": "Slug",
+  "database.table.header.action": "Azione",
+  "database.table.input.placeholder.title": "Inserisci il titolo",
+  "database.table.button.add": "Aggiungi",
+  "pagination.showing": "Visualizzazione di",
+  "pagination.to": "a",
+  "pagination.of": "di",
+  "pagination.entries": "voci",
+  "sidebar.paginationExample": "Esempio di paginazione",
+  "project.contributing": "Contribuire",
+  "project.documentation": "Documentazione",
+  "project.github": "GitHub",
+  "error.field.required": "Questo campo è obbligatorio",
+  "error.field.email": "Indirizzo email non valido",
+  "error.field": "Valore non valido",
+  "error.field.min": "Il valore deve essere maggiore o uguale a {0}",
+  "error.field.max": "Il valore deve essere minore o uguale a {0}",
+  "error.invalid.password": "La password non è valida, deve contenere [Numero/Carattere (Maiuscolo+Minuscolo)/?@",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "testWebSocket.stream": "Video Stream",
+  "testWebSocket.stopStream": "Stop",
+  "error.field.relation": "Il valore di questo campo non è valido",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "Esempio MySQL",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "Titolo",
+  "mysql.table.header.author": "Autore",
+  "mysql.table.header.publishedDate": "Data di pubblicazione",
+  "mysql.table.header.categoryId": "ID Categoria",
+  "mysql.table.header.actions": "Azioni",
+  "mysql.table.header.booksCount": "Numero di libri",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "Titolo",
+  "mysql.placeholder.author": "Autore",
+  "mysql.placeholder.publishedDate": "Data di pubblicazione",
+  "mysql.filter.allCategories": "Tutte le categorie",
+  "mysql.button.deleteSelected": "Elimina selezionati",
+  "mysql.button.update": "Aggiorna",
+  "mysql.button.reset": "Resetta",
+  "mysql.button.filter": "Filtra",
+  "mysql.button.delete": "Elimina",
+  "mysql.button.edit": "Modifica",
+  "mysql.message.deleteSelectedBooks": "Sei sicuro di voler eliminare i libri selezionati?",
+  "mysql.message.noBooksSelected": "Nessun libro selezionato per l'eliminazione.",
+  "mysql.message.deleteBook": "Sei sicuro di voler eliminare questo libro?",
+  "mysql.message.deleteCategory": "Sei sicuro di voler eliminare questa categoria?",
+  "mysql.message.noRecords": "Nessun record trovato",
+  "mysql.message.noCategories": "Nessuna categoria trovata",
+  "mysql.categories.title": "Esempio di categorie MySQL",
+  "sidebar.mongo": "Esempio MongoDB",
+  "person.example.title": "Esempio Persona",
+  "person.table.header.name": "Nome",
+  "person.table.header.age": "Età",
+  "person.table.header.married": "Sposato",
+  "person.table.header.email": "Email",
+  "person.table.header.height": "Altezza",
+  "person.table.header.birthday": "Compleanno",
+  "person.table.header.job": "Lavoro",
+  "person.table.header.skills": "Competenze",
+  "person.table.header.action": "Azione",
+  "person.table.empty": "Nessuna persona trovata.",
+  "database.table.empty": "Nessun record trovato",
+  "person.form.label.name": "Nome",
+  "person.form.placeholder.name": "Inserisci il tuo nome",
+  "person.form.label.email": "Email",
+  "person.form.placeholder.email": "Inserisci la tua email",
+  "person.form.label.age": "Età",
+  "person.form.placeholder.age": "Inserisci la tua età",
+  "person.form.label.birthday": "Compleanno",
+  "person.form.label.height": "Altezza",
+  "person.form.placeholder.height": "Inserisci la tua altezza",
+  "person.form.label.job_title": "Titolo del lavoro",
+  "person.form.option.select_job": "Seleziona lavoro",
+  "person.form.label.skills": "Competenze",
+  "person.form.label.password": "Password",
+  "person.form.placeholder.password": "Inserisci password",
+  "person.form.label.gender": "Genere",
+  "person.form.gender.dont_ask": "Non chiedermelo!",
+  "person.form.gender.male": "Maschio",
+  "person.form.gender.female": "Femmina",
+  "person.form.gender.other": "Altro",
+  "person.form.label.married": "Sposato",
+  "person.form.married.yes": "Sì",
+  "person.form.married.no": "No",
+  "person.form.label.color": "Colore",
+  "person.form.tooltip.color": "Scegli il tuo colore",
+  "person.form.button.submit": "Invia",
+  "person.form.button.cancel": "Annulla"
 }
