--- a/example/lib/languages/ja.json
+++ b/example/lib/languages/ja.json
@@ -1,145 +1,213 @@
 {
-    "dir": "ltr",
-    "example.params": "私の名前は{name}、年齢は{age}です",
-    "example.path": "ローカリゼーションのためのexample.pathのテストパス",
-    "example.tstring": "i18nのためのTStringオブジェクトのテスト",
-    "logo": "WebApp",
-    "logo.title": "WebApp",
-    "pages.title": "タイトル",
-    "welcome.message": "ようこそ",
-    "features.title": "WebAppの特徴",
-    "features.description": "WebAppは、Dart言語を使用して強力なウェブアプリケーションを最も簡単な方法で構築するために必要なすべてを提供します。このツールには、高速で軽量、かつ堅牢なウェブアプリを作成するための機能のセットが含まれています。以下は、提供される機能のいくつかです：",
-    "features.websocket": "WebSocket",
-    "features.mongodb": "MongoDB",
-    "features.cronjobs": "Cronジョブ",
-    "features.routing": "ルーティング",
-    "features.formvalidators": "フォームバリデーター",
-    "features.htmltools": "迅速なHTMLページ開発ツール",
-    "features.dbmodel": "データベースモデル作成",
-    "features.fastapi": "OpenAPIドキュメントによる高速API開発",
-    "features.other": "その他の多くの機能があり、例で探求します。",
-    "login.success": "ログイン成功",
-    "auth.test": "認証テスト",
-    "auth.welcome": "ようこそ、",
-    "auth.logout": "ログアウト",
-    "auth.routeExample": "認証が必要なルートの例",
-    "auth.logoutRoute": "ログアウトルートの例",
-    "cookies.test": "クッキーテスト",
-    "cookies.key": "キー",
-    "cookies.value": "値",
-    "cookies.action": "アクション",
-    "cookies.placeholder.name": "クッキー名",
-    "cookies.placeholder.value": "クッキー値",
-    "cookies.safe": "安全",
-    "cookies.add": "追加",
-    "cookies.remove": "クッキーを削除",
-    "cookies.addCookie": "クッキーを追加",
-    "auth.view": "表示",
-    "auth.controller": "コントローラー",
-    "auth.authController": "認証コントローラー",
-    "auth.router": "ルーター",
-    "email.test": "メールテスト",
-    "email.from": "送信者",
-    "email.fromName": "あなたの名前",
-    "email.to": "宛先",
-    "email.subject": "件名",
-    "email.message": "メッセージ",
-    "email.host": "ホスト",
-    "email.port": "ポート",
-    "email.username": "ユーザー名",
-    "email.password": "パスワード",
-    "email.allowInsecure": "非安全な接続を許可",
-    "email.ssl": "SSL",
-    "email.success": "メールが正常に送信されました！",
-    "email.failed": "メールの送信に失敗しました。",
-    "email.send": "メール送信",
-    "email.placeholder.name": "あなたの名前を入力",
-    "email.placeholder.to": "受取人のメールアドレスを入力",
-    "email.placeholder.subject": "件名を入力",
-    "email.placeholder.message": "メッセージを入力",
-    "email.placeholder.host": "ホスト名を入力",
-    "email.placeholder.port": "ポート番号を入力",
-    "email.placeholder.username": "ユーザー名を入力",
-    "email.placeholder.password": "パスワードを入力",
-    "form.validation.title": "フォームバリデーションテスト",
-    "form.validation.credentials.email": "メールアドレス",
-    "form.validation.credentials.password": "パスワード",
-    "form.validation.email": "メールアドレス",
-    "form.validation.emailPlaceholder": "メールアドレスを入力",
-    "form.validation.password": "パスワード",
-    "form.validation.passwordPlaceholder": "パスワードを入力",
-    "form.validation.login": "ログイン",
-    "form.validation.loginError": "ログインエラー",
-    "form.validation.loginSuccess": "ログイン成功！ようこそ",
-    "form.validation.logout": "ログアウト",
-    "form.validation.view": "表示",
-    "form.validation.controller": "コントローラー",
-    "i18n.title": "言語テスト (i18n)",
-    "i18n.language.english": "英語",
-    "i18n.language.persian": "ペルシャ語",
-    "i18n.language.dutch": "オランダ語",
-    "i18n.exampleTString": "例 TString",
-    "i18n.examplePath": "例のパス",
-    "i18n.examplePathString": "例のパス文字列",
-    "i18n.exampleParams": "こんにちは、私の名前は{name}で、{age}歳です。",
-    "i18n.view": "表示",
-    "i18n.controller": "コントローラー",
-    "i18n.languagesDirectory": "言語ディレクトリ",
-    "webappInfo.title": "WebApp情報",
-    "webappInfo.key": "{key}",
-    "webappInfo.info": "{info}",
-    "webappInfo.details": "{details}",
-    "webRouteExample.title": "Webルートの例",
-    "webRouteExample.path": "パス",
-    "webRouteExample.type": "タイプ",
-    "webRouteExample.permissions": "権限",
-    "webRouteExample.auth": "認証",
-    "webRouteExample.controller": "コントローラー",
-    "webRouteExample.router": "ルーター",
-    "testWebSocket.title": "WebSocketテスト",
-    "testWebSocket.output": "出力",
-    "testWebSocket.getTime": "時間を取得",
-    "testWebSocket.randomMessage": "ランダムメッセージ",
-    "testWebSocket.clientLists": "クライアントリスト",
-    "testWebSocket.clear": "クリア",
-    "navbar.toggleSidebar": "サイドバーを切り替え",
-    "navbar.toggleNavigation": "ナビゲーションを切り替え",
-    "languages.english": "英語",
-    "languages.persian": "ペルシャ語",
-    "languages.dutch": "オランダ語",
-    "sidebar.home": "ホーム",
-    "sidebar.info": "情報",
-    "sidebar.formExample": "フォームの例",
-    "sidebar.cookieExample": "クッキーの例",
-    "sidebar.routeExample": "ルートの例",
-    "sidebar.socketExample": "Web Socketの例",
-    "sidebar.emailExample": "メールの例",
-    "sidebar.authExample": "認証の例",
-    "sidebar.languageExample": "言語 (i18n) の例",
-    "sidebar.debugExample": "デバッグの例",
-    "sidebar.errorExample": "エラー",
-    "sidebar.dumpExample": "変数をダンプ",
-    "sidebar.monogdbExample": "MongoDBの例",
-    "database.test.title": "データベーステスト (MongoDB)",
-    "database.table.header.title": "タイトル",
-    "database.table.header.slug": "スラッグ",
-    "database.table.header.action": "アクション",
-    "database.table.input.placeholder.title": "タイトルを入力",
-    "database.table.button.add": "追加",
-    "pagination.showing": "表示中",
-    "pagination.to": "から",
-    "pagination.of": "の",
-    "pagination.entries": "エントリ",
-    "sidebar.paginationExample": "ページネーションの例",
-    "project.contributing": "貢献",
-    "project.documentation": "ドキュメント",
-    "project.github": "GitHub",
-    "error.field.required": "このフィールドは必須です",
-    "error.field.email": "無効なメールアドレスです",
-    "error.field": "無効な値",
-    "error.field.min": "値は{0}以上である必要があります",
-    "error.field.max": "値は{0}以下である必要があります",
-    "error.invalid.password": "パスワードが無効です、[数字/文字(大文字+小文字)/?@が必要です",
-    "testWebSocket.stream": "Video Stream",
-    "testWebSocket.stopStream": "Stop"
+  "dir": "ltr",
+  "example.params": "私の名前は{name}、年齢は{age}です",
+  "example.path": "ローカリゼーションのためのexample.pathのテストパス",
+  "example.tstring": "i18nのためのTStringオブジェクトのテスト",
+  "logo": "WebApp",
+  "logo.title": "WebApp",
+  "pages.title": "タイトル",
+  "welcome.message": "ようこそ",
+  "features.title": "WebAppの特徴",
+  "features.description": "WebAppは、Dart言語を使用して強力なウェブアプリケーションを最も簡単な方法で構築するために必要なすべてを提供します。このツールには、高速で軽量、かつ堅牢なウェブアプリを作成するための機能のセットが含まれています。以下は、提供される機能のいくつかです：",
+  "features.websocket": "WebSocket",
+  "features.mongodb": "MongoDB",
+  "features.cronjobs": "Cronジョブ",
+  "features.routing": "ルーティング",
+  "features.formvalidators": "フォームバリデーター",
+  "features.htmltools": "迅速なHTMLページ開発ツール",
+  "features.dbmodel": "データベースモデル作成",
+  "features.fastapi": "OpenAPIドキュメントによる高速API開発",
+  "features.other": "その他の多くの機能があり、例で探求します。",
+  "login.success": "ログイン成功",
+  "auth.test": "認証テスト",
+  "auth.welcome": "ようこそ、",
+  "auth.logout": "ログアウト",
+  "auth.routeExample": "認証が必要なルートの例",
+  "auth.logoutRoute": "ログアウトルートの例",
+  "cookies.test": "クッキーテスト",
+  "cookies.key": "キー",
+  "cookies.value": "値",
+  "cookies.action": "アクション",
+  "cookies.placeholder.name": "クッキー名",
+  "cookies.placeholder.value": "クッキー値",
+  "cookies.safe": "安全",
+  "cookies.add": "追加",
+  "cookies.remove": "クッキーを削除",
+  "cookies.addCookie": "クッキーを追加",
+  "auth.view": "表示",
+  "auth.controller": "コントローラー",
+  "auth.authController": "認証コントローラー",
+  "auth.router": "ルーター",
+  "email.test": "メールテスト",
+  "email.from": "送信者",
+  "email.fromName": "あなたの名前",
+  "email.to": "宛先",
+  "email.subject": "件名",
+  "email.message": "メッセージ",
+  "email.host": "ホスト",
+  "email.port": "ポート",
+  "email.username": "ユーザー名",
+  "email.password": "パスワード",
+  "email.allowInsecure": "非安全な接続を許可",
+  "email.ssl": "SSL",
+  "email.success": "メールが正常に送信されました！",
+  "email.failed": "メールの送信に失敗しました。",
+  "email.send": "メール送信",
+  "email.placeholder.name": "あなたの名前を入力",
+  "email.placeholder.to": "受取人のメールアドレスを入力",
+  "email.placeholder.subject": "件名を入力",
+  "email.placeholder.message": "メッセージを入力",
+  "email.placeholder.host": "ホスト名を入力",
+  "email.placeholder.port": "ポート番号を入力",
+  "email.placeholder.username": "ユーザー名を入力",
+  "email.placeholder.password": "パスワードを入力",
+  "form.validation.title": "フォームバリデーションテスト",
+  "form.validation.credentials.email": "メールアドレス",
+  "form.validation.credentials.password": "パスワード",
+  "form.validation.email": "メールアドレス",
+  "form.validation.emailPlaceholder": "メールアドレスを入力",
+  "form.validation.password": "パスワード",
+  "form.validation.passwordPlaceholder": "パスワードを入力",
+  "form.validation.login": "ログイン",
+  "form.validation.loginError": "ログインエラー",
+  "form.validation.loginSuccess": "ログイン成功！ようこそ",
+  "form.validation.logout": "ログアウト",
+  "form.validation.view": "表示",
+  "form.validation.controller": "コントローラー",
+  "i18n.title": "言語テスト (i18n)",
+  "i18n.language.english": "英語",
+  "i18n.language.persian": "ペルシャ語",
+  "i18n.language.dutch": "オランダ語",
+  "i18n.exampleTString": "例 TString",
+  "i18n.examplePath": "例のパス",
+  "i18n.examplePathString": "例のパス文字列",
+  "i18n.exampleParams": "こんにちは、私の名前は{name}で、{age}歳です。",
+  "i18n.view": "表示",
+  "i18n.controller": "コントローラー",
+  "i18n.languagesDirectory": "言語ディレクトリ",
+  "webappInfo.title": "WebApp情報",
+  "webappInfo.key": "{key}",
+  "webappInfo.info": "{info}",
+  "webappInfo.details": "{details}",
+  "webRouteExample.title": "Webルートの例",
+  "webRouteExample.path": "パス",
+  "webRouteExample.type": "タイプ",
+  "webRouteExample.permissions": "権限",
+  "webRouteExample.auth": "認証",
+  "webRouteExample.controller": "コントローラー",
+  "webRouteExample.router": "ルーター",
+  "testWebSocket.title": "WebSocketテスト",
+  "testWebSocket.output": "出力",
+  "testWebSocket.getTime": "時間を取得",
+  "testWebSocket.randomMessage": "ランダムメッセージ",
+  "testWebSocket.clientLists": "クライアントリスト",
+  "testWebSocket.clear": "クリア",
+  "navbar.toggleSidebar": "サイドバーを切り替え",
+  "navbar.toggleNavigation": "ナビゲーションを切り替え",
+  "languages.english": "英語",
+  "languages.persian": "ペルシャ語",
+  "languages.dutch": "オランダ語",
+  "sidebar.home": "ホーム",
+  "sidebar.info": "情報",
+  "sidebar.formExample": "フォームの例",
+  "sidebar.cookieExample": "クッキーの例",
+  "sidebar.routeExample": "ルートの例",
+  "sidebar.socketExample": "Web Socketの例",
+  "sidebar.emailExample": "メールの例",
+  "sidebar.authExample": "認証の例",
+  "sidebar.languageExample": "言語 (i18n) の例",
+  "sidebar.debugExample": "デバッグの例",
+  "sidebar.errorExample": "エラー",
+  "sidebar.dumpExample": "変数をダンプ",
+  "sidebar.monogdbExample": "MongoDBの例",
+  "database.test.title": "データベーステスト (MongoDB)",
+  "database.table.header.title": "タイトル",
+  "database.table.header.slug": "スラッグ",
+  "database.table.header.action": "アクション",
+  "database.table.input.placeholder.title": "タイトルを入力",
+  "database.table.button.add": "追加",
+  "pagination.showing": "表示中",
+  "pagination.to": "から",
+  "pagination.of": "の",
+  "pagination.entries": "エントリ",
+  "sidebar.paginationExample": "ページネーションの例",
+  "project.contributing": "貢献",
+  "project.documentation": "ドキュメント",
+  "project.github": "GitHub",
+  "error.field.required": "このフィールドは必須です",
+  "error.field.email": "無効なメールアドレスです",
+  "error.field": "無効な値",
+  "error.field.min": "値は{0}以上である必要があります",
+  "error.field.max": "値は{0}以下である必要があります",
+  "error.invalid.password": "パスワードが無効です、[数字/文字(大文字+小文字)/?@が必要です",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "testWebSocket.stream": "ビデオストリーム",
+  "testWebSocket.stopStream": "停止",
+  "error.field.relation": "このフィールドの値が無効です",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "MySQLの例",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "タイトル",
+  "mysql.table.header.author": "著者",
+  "mysql.table.header.publishedDate": "公開日",
+  "mysql.table.header.categoryId": "カテゴリーID",
+  "mysql.table.header.actions": "アクション",
+  "mysql.table.header.booksCount": "書籍数",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "タイトル",
+  "mysql.placeholder.author": "著者",
+  "mysql.placeholder.publishedDate": "公開日",
+  "mysql.filter.allCategories": "すべてのカテゴリー",
+  "mysql.button.deleteSelected": "選択項目を削除",
+  "mysql.button.update": "更新",
+  "mysql.button.reset": "リセット",
+  "mysql.button.filter": "フィルター",
+  "mysql.button.delete": "削除",
+  "mysql.button.edit": "編集",
+  "mysql.message.deleteSelectedBooks": "選択した書籍を削除してもよろしいですか？",
+  "mysql.message.noBooksSelected": "削除する書籍が選択されていません。",
+  "mysql.message.deleteBook": "この書籍を削除してもよろしいですか？",
+  "mysql.message.deleteCategory": "このカテゴリーを削除してもよろしいですか？",
+  "mysql.message.noRecords": "レコードが見つかりません",
+  "mysql.message.noCategories": "カテゴリーが見つかりません",
+  "mysql.categories.title": "MySQLカテゴリーの例",
+  "sidebar.mongo": "MongoDBの例",
+  "person.example.title": "人物の例",
+  "person.table.header.name": "名前",
+  "person.table.header.age": "年齢",
+  "person.table.header.married": "既婚",
+  "person.table.header.email": "メール",
+  "person.table.header.height": "身長",
+  "person.table.header.birthday": "誕生日",
+  "person.table.header.job": "職業",
+  "person.table.header.skills": "スキル",
+  "person.table.header.action": "アクション",
+  "person.table.empty": "人物が見つかりません。",
+  "database.table.empty": "レコードが見つかりません",
+  "person.form.label.name": "名前",
+  "person.form.placeholder.name": "あなたの名前を入力してください",
+  "person.form.label.email": "メール",
+  "person.form.placeholder.email": "あなたのメールを入力してください",
+  "person.form.label.age": "年齢",
+  "person.form.placeholder.age": "あなたの年齢を入力してください",
+  "person.form.label.birthday": "誕生日",
+  "person.form.label.height": "身長",
+  "person.form.placeholder.height": "あなたの身長を入力してください",
+  "person.form.label.job_title": "職種",
+  "person.form.option.select_job": "職業を選択",
+  "person.form.label.skills": "スキル",
+  "person.form.label.password": "パスワード",
+  "person.form.placeholder.password": "パスワードを入力",
+  "person.form.label.gender": "性別",
+  "person.form.gender.dont_ask": "聞かないで！",
+  "person.form.gender.male": "男性",
+  "person.form.gender.female": "女性",
+  "person.form.gender.other": "その他",
+  "person.form.label.married": "既婚",
+  "person.form.married.yes": "はい",
+  "person.form.married.no": "いいえ",
+  "person.form.label.color": "色",
+  "person.form.tooltip.color": "あなたの色を選択してください",
+  "person.form.button.submit": "送信",
+  "person.form.button.cancel": "キャンセル"
 }
