--- a/example/lib/languages/ru.json
+++ b/example/lib/languages/ru.json
@@ -1,145 +1,213 @@
 {
-    "dir": "ltr",
-    "example.params": "Меня зовут {name}, мне {age} лет",
-    "example.path": "Тестовый путь example.path для локализации",
-    "example.tstring": "Тестирование объектов TString для интернационализации",
-    "logo": "WebApp",
-    "logo.title": "WebApp",
-    "pages.title": "Заголовок",
-    "welcome.message": "Добро пожаловать на",
-    "features.title": "Функции WebApp",
-    "features.description": "WebApp предоставляет вам все необходимое для создания мощного веб-приложения самым простым способом с использованием языка Dart. Этот инструмент включает набор функций для создания быстрого, легкого и надежного веб-приложения. Вот некоторые из функций, которые он предлагает:",
-    "features.websocket": "WebSocket",
-    "features.mongodb": "MongoDB",
-    "features.cronjobs": "Cron Jobs",
-    "features.routing": "Маршрутизация",
-    "features.formvalidators": "Валидация форм",
-    "features.htmltools": "Инструменты для быстрого разработки HTML-страниц",
-    "features.dbmodel": "Создание модели базы данных",
-    "features.fastapi": "Быстрая разработка API с документацией OpenAPI",
-    "features.other": "И многие другие функции, которые мы исследуем в примерах.",
-    "login.success": "Успешный вход",
-    "auth.test": "Тестирование аутентификации",
-    "auth.welcome": "Добро пожаловать,",
-    "auth.logout": "Выход",
-    "auth.routeExample": "Пример маршрута, требующего аутентификации",
-    "auth.logoutRoute": "Пример маршрута выхода",
-    "cookies.test": "Тестирование куки",
-    "cookies.key": "Ключ",
-    "cookies.value": "Значение",
-    "cookies.action": "Действие",
-    "cookies.placeholder.name": "Имя куки",
-    "cookies.placeholder.value": "Значение куки",
-    "cookies.safe": "Безопасно",
-    "cookies.add": "Добавить",
-    "cookies.remove": "Удалить куки",
-    "cookies.addCookie": "Добавить куки",
-    "auth.view": "Просмотр",
-    "auth.controller": "Контроллер",
-    "auth.authController": "Контроллер аутентификации",
-    "auth.router": "Маршрутизатор",
-    "email.test": "Тестирование электронной почты",
-    "email.from": "От",
-    "email.fromName": "Ваше имя",
-    "email.to": "Кому",
-    "email.subject": "Тема",
-    "email.message": "Сообщение",
-    "email.host": "Хост",
-    "email.port": "Порт",
-    "email.username": "Имя пользователя",
-    "email.password": "Пароль",
-    "email.allowInsecure": "Разрешить небезопасное",
-    "email.ssl": "SSL",
-    "email.success": "Электронное письмо успешно отправлено!",
-    "email.failed": "Не удалось отправить электронное письмо.",
-    "email.send": "Отправить электронное письмо",
-    "email.placeholder.name": "Введите ваше имя",
-    "email.placeholder.to": "Введите адрес электронной почты получателя",
-    "email.placeholder.subject": "Введите тему",
-    "email.placeholder.message": "Введите сообщение",
-    "email.placeholder.host": "Введите имя хоста",
-    "email.placeholder.port": "Введите номер порта",
-    "email.placeholder.username": "Введите имя пользователя",
-    "email.placeholder.password": "Введите пароль",
-    "form.validation.title": "Тестирование валидации формы",
-    "form.validation.credentials.email": "Электронная почта",
-    "form.validation.credentials.password": "Пароль",
-    "form.validation.email": "Адрес электронной почты",
-    "form.validation.emailPlaceholder": "Введите вашу электронную почту",
-    "form.validation.password": "Пароль",
-    "form.validation.passwordPlaceholder": "Введите ваш пароль",
-    "form.validation.login": "Войти",
-    "form.validation.loginError": "Ошибка входа",
-    "form.validation.loginSuccess": "Успешный вход! Добро пожаловать",
-    "form.validation.logout": "Выход",
-    "form.validation.view": "Просмотр",
-    "form.validation.controller": "Контроллер",
-    "i18n.title": "Тестирование языка (i18n)",
-    "i18n.language.english": "Английский",
-    "i18n.language.persian": "Персидский",
-    "i18n.language.dutch": "Голландский",
-    "i18n.exampleTString": "Пример TString",
-    "i18n.examplePath": "Пример пути",
-    "i18n.examplePathString": "Пример строки пути",
-    "i18n.exampleParams": "Привет, меня зовут {name}, и мне {age} лет.",
-    "i18n.view": "Просмотр",
-    "i18n.controller": "Контроллер",
-    "i18n.languagesDirectory": "Каталог языков",
-    "webappInfo.title": "Информация о WebApp",
-    "webappInfo.key": "{key}",
-    "webappInfo.info": "{info}",
-    "webappInfo.details": "{details}",
-    "webRouteExample.title": "Пример веб-маршрута",
-    "webRouteExample.path": "Путь",
-    "webRouteExample.type": "Тип",
-    "webRouteExample.permissions": "Разрешения",
-    "webRouteExample.auth": "Аутентификация",
-    "webRouteExample.controller": "Контроллер",
-    "webRouteExample.router": "Маршрутизатор",
-    "testWebSocket.title": "Тестирование WebSocket",
-    "testWebSocket.output": "Вывод",
-    "testWebSocket.getTime": "Получить время",
-    "testWebSocket.randomMessage": "Случайное сообщение",
-    "testWebSocket.clientLists": "Списки клиентов",
-    "testWebSocket.clear": "Очистить",
-    "navbar.toggleSidebar": "Переключить боковую панель",
-    "navbar.toggleNavigation": "Переключить навигацию",
-    "languages.english": "Английский",
-    "languages.persian": "Персидский",
-    "languages.dutch": "Голландский",
-    "sidebar.home": "Главная",
-    "sidebar.info": "Информация",
-    "sidebar.formExample": "Пример формы",
-    "sidebar.cookieExample": "Пример куки",
-    "sidebar.routeExample": "Пример маршрута",
-    "sidebar.socketExample": "Пример WebSocket",
-    "sidebar.emailExample": "Пример электронной почты",
-    "sidebar.authExample": "Пример аутентификации",
-    "sidebar.languageExample": "Пример языка (i18n)",
-    "sidebar.debugExample": "Пример отладки",
-    "sidebar.errorExample": "Ошибка",
-    "sidebar.dumpExample": "Сброс переменных",
-    "sidebar.monogdbExample": "Пример MongoDB",
-    "database.test.title": "Тестирование базы данных (MongoDB)",
-    "database.table.header.title": "Заголовок",
-    "database.table.header.slug": "Слаг",
-    "database.table.header.action": "Действие",
-    "database.table.input.placeholder.title": "Введите заголовок",
-    "database.table.button.add": "Добавить",
-    "pagination.showing": "Показано",
-    "pagination.to": "до",
-    "pagination.of": "из",
-    "pagination.entries": "записей",
-    "sidebar.paginationExample": "Пример пагинации",
-    "project.contributing": "Вклад",
-    "project.documentation": "Документация",
-    "project.github": "GitHub",
-    "error.field.required": "Это поле обязательно для заполнения",
-    "error.field.email": "Неверный адрес электронной почты",
-    "error.field": "Недопустимое значение",
-    "error.field.min": "Значение должно быть больше или равно {0}",
-    "error.field.max": "Значение должно быть меньше или равно {0}",
-    "error.invalid.password": "Пароль недействителен, он должен содержать [Цифру/Букву (Заглавную+Строчную)/?@",
-    "testWebSocket.stream": "Video Stream",
-    "testWebSocket.stopStream": "Stop"
+  "dir": "ltr",
+  "example.params": "Меня зовут {name}, мне {age} лет",
+  "example.path": "Тестовый путь example.path для локализации",
+  "example.tstring": "Тестирование объектов TString для интернационализации",
+  "logo": "WebApp",
+  "logo.title": "WebApp",
+  "pages.title": "Заголовок",
+  "welcome.message": "Добро пожаловать на",
+  "features.title": "Функции WebApp",
+  "features.description": "WebApp предоставляет вам все необходимое для создания мощного веб-приложения самым простым способом с использованием языка Dart. Этот инструмент включает набор функций для создания быстрого, легкого и надежного веб-приложения. Вот некоторые из функций, которые он предлагает:",
+  "features.websocket": "WebSocket",
+  "features.mongodb": "MongoDB",
+  "features.cronjobs": "Cron Jobs",
+  "features.routing": "Маршрутизация",
+  "features.formvalidators": "Валидация форм",
+  "features.htmltools": "Инструменты для быстрого разработки HTML-страниц",
+  "features.dbmodel": "Создание модели базы данных",
+  "features.fastapi": "Быстрая разработка API с документацией OpenAPI",
+  "features.other": "И многие другие функции, которые мы исследуем в примерах.",
+  "login.success": "Успешный вход",
+  "auth.test": "Тестирование аутентификации",
+  "auth.welcome": "Добро пожаловать,",
+  "auth.logout": "Выход",
+  "auth.routeExample": "Пример маршрута, требующего аутентификации",
+  "auth.logoutRoute": "Пример маршрута выхода",
+  "cookies.test": "Тестирование куки",
+  "cookies.key": "Ключ",
+  "cookies.value": "Значение",
+  "cookies.action": "Действие",
+  "cookies.placeholder.name": "Имя куки",
+  "cookies.placeholder.value": "Значение куки",
+  "cookies.safe": "Безопасно",
+  "cookies.add": "Добавить",
+  "cookies.remove": "Удалить куки",
+  "cookies.addCookie": "Добавить куки",
+  "auth.view": "Просмотр",
+  "auth.controller": "Контроллер",
+  "auth.authController": "Контроллер аутентификации",
+  "auth.router": "Маршрутизатор",
+  "email.test": "Тестирование электронной почты",
+  "email.from": "От",
+  "email.fromName": "Ваше имя",
+  "email.to": "Кому",
+  "email.subject": "Тема",
+  "email.message": "Сообщение",
+  "email.host": "Хост",
+  "email.port": "Порт",
+  "email.username": "Имя пользователя",
+  "email.password": "Пароль",
+  "email.allowInsecure": "Разрешить небезопасное",
+  "email.ssl": "SSL",
+  "email.success": "Электронное письмо успешно отправлено!",
+  "email.failed": "Не удалось отправить электронное письмо.",
+  "email.send": "Отправить электронное письмо",
+  "email.placeholder.name": "Введите ваше имя",
+  "email.placeholder.to": "Введите адрес электронной почты получателя",
+  "email.placeholder.subject": "Введите тему",
+  "email.placeholder.message": "Введите сообщение",
+  "email.placeholder.host": "Введите имя хоста",
+  "email.placeholder.port": "Введите номер порта",
+  "email.placeholder.username": "Введите имя пользователя",
+  "email.placeholder.password": "Введите пароль",
+  "form.validation.title": "Тестирование валидации формы",
+  "form.validation.credentials.email": "Электронная почта",
+  "form.validation.credentials.password": "Пароль",
+  "form.validation.email": "Адрес электронной почты",
+  "form.validation.emailPlaceholder": "Введите вашу электронную почту",
+  "form.validation.password": "Пароль",
+  "form.validation.passwordPlaceholder": "Введите ваш пароль",
+  "form.validation.login": "Войти",
+  "form.validation.loginError": "Ошибка входа",
+  "form.validation.loginSuccess": "Успешный вход! Добро пожаловать",
+  "form.validation.logout": "Выход",
+  "form.validation.view": "Просмотр",
+  "form.validation.controller": "Контроллер",
+  "i18n.title": "Тестирование языка (i18n)",
+  "i18n.language.english": "Английский",
+  "i18n.language.persian": "Персидский",
+  "i18n.language.dutch": "Голландский",
+  "i18n.exampleTString": "Пример TString",
+  "i18n.examplePath": "Пример пути",
+  "i18n.examplePathString": "Пример строки пути",
+  "i18n.exampleParams": "Привет, меня зовут {name}, и мне {age} лет.",
+  "i18n.view": "Просмотр",
+  "i18n.controller": "Контроллер",
+  "i18n.languagesDirectory": "Каталог языков",
+  "webappInfo.title": "Информация о WebApp",
+  "webappInfo.key": "{key}",
+  "webappInfo.info": "{info}",
+  "webappInfo.details": "{details}",
+  "webRouteExample.title": "Пример веб-маршрута",
+  "webRouteExample.path": "Путь",
+  "webRouteExample.type": "Тип",
+  "webRouteExample.permissions": "Разрешения",
+  "webRouteExample.auth": "Аутентификация",
+  "webRouteExample.controller": "Контроллер",
+  "webRouteExample.router": "Маршрутизатор",
+  "testWebSocket.title": "Тестирование WebSocket",
+  "testWebSocket.output": "Вывод",
+  "testWebSocket.getTime": "Получить время",
+  "testWebSocket.randomMessage": "Случайное сообщение",
+  "testWebSocket.clientLists": "Списки клиентов",
+  "testWebSocket.clear": "Очистить",
+  "navbar.toggleSidebar": "Переключить боковую панель",
+  "navbar.toggleNavigation": "Переключить навигацию",
+  "languages.english": "Английский",
+  "languages.persian": "Персидский",
+  "languages.dutch": "Голландский",
+  "sidebar.home": "Главная",
+  "sidebar.info": "Информация",
+  "sidebar.formExample": "Пример формы",
+  "sidebar.cookieExample": "Пример куки",
+  "sidebar.routeExample": "Пример маршрута",
+  "sidebar.socketExample": "Пример WebSocket",
+  "sidebar.emailExample": "Пример электронной почты",
+  "sidebar.authExample": "Пример аутентификации",
+  "sidebar.languageExample": "Пример языка (i18n)",
+  "sidebar.debugExample": "Пример отладки",
+  "sidebar.errorExample": "Ошибка",
+  "sidebar.dumpExample": "Сброс переменных",
+  "sidebar.monogdbExample": "Пример MongoDB",
+  "database.test.title": "Тестирование базы данных (MongoDB)",
+  "database.table.header.title": "Заголовок",
+  "database.table.header.slug": "Слаг",
+  "database.table.header.action": "Действие",
+  "database.table.input.placeholder.title": "Введите заголовок",
+  "database.table.button.add": "Добавить",
+  "pagination.showing": "Показано",
+  "pagination.to": "до",
+  "pagination.of": "из",
+  "pagination.entries": "записей",
+  "sidebar.paginationExample": "Пример пагинации",
+  "project.contributing": "Вклад",
+  "project.documentation": "Документация",
+  "project.github": "GitHub",
+  "error.field.required": "Это поле обязательно для заполнения",
+  "error.field.email": "Неверный адрес электронной почты",
+  "error.field": "Недопустимое значение",
+  "error.field.min": "Значение должно быть больше или равно {0}",
+  "error.field.max": "Значение должно быть меньше или равно {0}",
+  "error.invalid.password": "Пароль недействителен, он должен содержать [Цифру/Букву (Заглавную+Строчную)/?@",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "testWebSocket.stream": "Видео поток",
+  "testWebSocket.stopStream": "Остановить",
+  "error.field.relation": "Значение этого поля недействительно",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "Пример MySQL",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "Заголовок",
+  "mysql.table.header.author": "Автор",
+  "mysql.table.header.publishedDate": "Дата публикации",
+  "mysql.table.header.categoryId": "ID категории",
+  "mysql.table.header.actions": "Действия",
+  "mysql.table.header.booksCount": "Количество книг",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "Заголовок",
+  "mysql.placeholder.author": "Автор",
+  "mysql.placeholder.publishedDate": "Дата публикации",
+  "mysql.filter.allCategories": "Все категории",
+  "mysql.button.deleteSelected": "Удалить выбранные",
+  "mysql.button.update": "Обновить",
+  "mysql.button.reset": "Сбросить",
+  "mysql.button.filter": "Фильтр",
+  "mysql.button.delete": "Удалить",
+  "mysql.button.edit": "Редактировать",
+  "mysql.message.deleteSelectedBooks": "Вы уверены, что хотите удалить выбранные книги?",
+  "mysql.message.noBooksSelected": "Не выбраны книги для удаления.",
+  "mysql.message.deleteBook": "Вы уверены, что хотите удалить эту книгу?",
+  "mysql.message.deleteCategory": "Вы уверены, что хотите удалить эту категорию?",
+  "mysql.message.noRecords": "Записи не найдены",
+  "mysql.message.noCategories": "Категории не найдены",
+  "mysql.categories.title": "Пример категорий MySQL",
+  "sidebar.mongo": "Пример MongoDB",
+  "person.example.title": "Пример с людьми",
+  "person.table.header.name": "Имя",
+  "person.table.header.age": "Возраст",
+  "person.table.header.married": "Женат/замужем",
+  "person.table.header.email": "Эл. почта",
+  "person.table.header.height": "Рост",
+  "person.table.header.birthday": "День рождения",
+  "person.table.header.job": "Работа",
+  "person.table.header.skills": "Навыки",
+  "person.table.header.action": "Действие",
+  "person.table.empty": "Люди не найдены.",
+  "database.table.empty": "Записи не найдены",
+  "person.form.label.name": "Имя",
+  "person.form.placeholder.name": "Введите ваше имя",
+  "person.form.label.email": "Электронная почта",
+  "person.form.placeholder.email": "Введите вашу электронную почту",
+  "person.form.label.age": "Возраст",
+  "person.form.placeholder.age": "Введите ваш возраст",
+  "person.form.label.birthday": "День рождения",
+  "person.form.label.height": "Рост",
+  "person.form.placeholder.height": "Введите ваш рост",
+  "person.form.label.job_title": "Должность",
+  "person.form.option.select_job": "Выберите работу",
+  "person.form.label.skills": "Навыки",
+  "person.form.label.password": "Пароль",
+  "person.form.placeholder.password": "Введите пароль",
+  "person.form.label.gender": "Пол",
+  "person.form.gender.dont_ask": "Не спрашивай!",
+  "person.form.gender.male": "Мужской",
+  "person.form.gender.female": "Женский",
+  "person.form.gender.other": "Другое",
+  "person.form.label.married": "Женат/замужем",
+  "person.form.married.yes": "Да",
+  "person.form.married.no": "Нет",
+  "person.form.label.color": "Цвет",
+  "person.form.tooltip.color": "Выберите ваш цвет",
+  "person.form.button.submit": "Отправить",
+  "person.form.button.cancel": "Отмена"
 }
