--- a/example/lib/languages/tr.json
+++ b/example/lib/languages/tr.json
@@ -1,145 +1,213 @@
 {
-    "dir": "ltr",
-    "example.params": "Adım {name}, yaşım {age}",
-    "example.path": "Yerelleştirme için example.path'in test yolu",
-    "example.tstring": "i18n için TString nesnelerinin testi",
-    "logo": "WebApp",
-    "logo.title": "WebApp",
-    "pages.title": "Başlık",
-    "welcome.message": "Hoş geldiniz",
-    "features.title": "WebApp Özellikleri",
-    "features.description": "WebApp, Dart dilini kullanarak güçlü bir web uygulaması oluşturmak için ihtiyaç duyduğunuz her şeyi en basit şekilde sunar. Bu araç, hızlı, hafif ve sağlam bir web uygulaması oluşturmak için bir dizi özellik içerir. İşte sunduğu bazı özellikler:",
-    "features.websocket": "WebSocket",
-    "features.mongodb": "MongoDB",
-    "features.cronjobs": "Cron Görevleri",
-    "features.routing": "Yönlendirme",
-    "features.formvalidators": "Form doğrulayıcıları",
-    "features.htmltools": "Hızlı HTML sayfası geliştirme araçları",
-    "features.dbmodel": "Veritabanı modeli oluşturma",
-    "features.fastapi": "OpenAPI belgeleri ile hızlı API geliştirme",
-    "features.other": "Ve diğer birçok özellik, bunları örneklerde keşfedeceğiz.",
-    "login.success": "Giriş başarılı",
-    "auth.test": "Kimlik Doğrulama Testi",
-    "auth.welcome": "Hoş geldiniz,",
-    "auth.logout": "Çıkış",
-    "auth.routeExample": "Kimlik doğrulaması gerektiren bir rota örneği",
-    "auth.logoutRoute": "Çıkış rotası örneği",
-    "cookies.test": "Çerez Testi",
-    "cookies.key": "Anahtar",
-    "cookies.value": "Değer",
-    "cookies.action": "Eylem",
-    "cookies.placeholder.name": "Çerez adı",
-    "cookies.placeholder.value": "Çerez değeri",
-    "cookies.safe": "Güvenli",
-    "cookies.add": "Ekle",
-    "cookies.remove": "Çerezi kaldır",
-    "cookies.addCookie": "Çerez ekle",
-    "auth.view": "Görüntüle",
-    "auth.controller": "Kontrolör",
-    "auth.authController": "Kimlik Doğrulama Kontrolörü",
-    "auth.router": "Yönlendirici",
-    "email.test": "E-posta Testi",
-    "email.from": "Kimden",
-    "email.fromName": "Adınız",
-    "email.to": "Kime",
-    "email.subject": "Konu",
-    "email.message": "Mesaj",
-    "email.host": "Host",
-    "email.port": "Port",
-    "email.username": "Kullanıcı adı",
-    "email.password": "Şifre",
-    "email.allowInsecure": "Güvensiz bağlantıya izin ver",
-    "email.ssl": "SSL",
-    "email.success": "E-posta başarıyla gönderildi!",
-    "email.failed": "E-posta gönderilemedi.",
-    "email.send": "E-posta Gönder",
-    "email.placeholder.name": "Adınızı girin",
-    "email.placeholder.to": "Alıcının e-posta adresini girin",
-    "email.placeholder.subject": "Konu girin",
-    "email.placeholder.message": "Mesaj girin",
-    "email.placeholder.host": "Host adını girin",
-    "email.placeholder.port": "Port numarasını girin",
-    "email.placeholder.username": "Kullanıcı adını girin",
-    "email.placeholder.password": "Şifreyi girin",
-    "form.validation.title": "Form doğrulama testi",
-    "form.validation.credentials.email": "E-posta",
-    "form.validation.credentials.password": "Şifre",
-    "form.validation.email": "E-posta adresi",
-    "form.validation.emailPlaceholder": "E-posta adresinizi girin",
-    "form.validation.password": "Şifre",
-    "form.validation.passwordPlaceholder": "Şifrenizi girin",
-    "form.validation.login": "Giriş",
-    "form.validation.loginError": "Giriş hatası",
-    "form.validation.loginSuccess": "Giriş başarılı! Hoş geldiniz",
-    "form.validation.logout": "Çıkış",
-    "form.validation.view": "Görüntüle",
-    "form.validation.controller": "Kontrolör",
-    "i18n.title": "Dil Testi (i18n)",
-    "i18n.language.english": "İngilizce",
-    "i18n.language.persian": "Farsça",
-    "i18n.language.dutch": "Hollandaca",
-    "i18n.exampleTString": "Örnek TString",
-    "i18n.examplePath": "Örnek Yol",
-    "i18n.examplePathString": "Örnek Yol Dizesi",
-    "i18n.exampleParams": "Merhaba, benim adım {name} ve ben {age} yaşındayım.",
-    "i18n.view": "Görüntüle",
-    "i18n.controller": "Kontrolör",
-    "i18n.languagesDirectory": "Diller dizini",
-    "webappInfo.title": "WebApp Bilgisi",
-    "webappInfo.key": "{key}",
-    "webappInfo.info": "{info}",
-    "webappInfo.details": "{details}",
-    "webRouteExample.title": "Web Yolu örneği",
-    "webRouteExample.path": "Yol",
-    "webRouteExample.type": "Tip",
-    "webRouteExample.permissions": "İzinler",
-    "webRouteExample.auth": "Kimlik Doğrulama",
-    "webRouteExample.controller": "Kontrolör",
-    "webRouteExample.router": "Yönlendirici",
-    "testWebSocket.title": "WebSocket Testi",
-    "testWebSocket.output": "Çıktı",
-    "testWebSocket.getTime": "Zamanı Al",
-    "testWebSocket.randomMessage": "Rastgele mesaj",
-    "testWebSocket.clientLists": "Müşteri listeleri",
-    "testWebSocket.clear": "Temizle",
-    "navbar.toggleSidebar": "Yan Çubuğu Aç/Kapa",
-    "navbar.toggleNavigation": "Navigasyonu Aç/Kapa",
-    "languages.english": "İngilizce",
-    "languages.persian": "Farsça",
-    "languages.dutch": "Hollandaca",
-    "sidebar.home": "Ana Sayfa",
-    "sidebar.info": "Bilgi",
-    "sidebar.formExample": "Form Örneği",
-    "sidebar.cookieExample": "Çerez Örneği",
-    "sidebar.routeExample": "Rota Örneği",
-    "sidebar.socketExample": "Web Socket Örneği",
-    "sidebar.emailExample": "E-posta Örneği",
-    "sidebar.authExample": "Kimlik Doğrulama Örneği",
-    "sidebar.languageExample": "Dil (i18n) Örneği",
-    "sidebar.debugExample": "Hata Ayıklama Örneği",
-    "sidebar.errorExample": "Hata",
-    "sidebar.dumpExample": "Değişkenleri Yazdır",
-    "sidebar.monogdbExample": "MongoDB Örneği",
-    "database.test.title": "Veritabanı Testi (MongoDB)",
-    "database.table.header.title": "Başlık",
-    "database.table.header.slug": "Slug",
-    "database.table.header.action": "Eylem",
-    "database.table.input.placeholder.title": "Başlık girin",
-    "database.table.button.add": "Ekle",
-    "pagination.showing": "Gösteriliyor",
-    "pagination.to": "e",
-    "pagination.of": "nın",
-    "pagination.entries": "giriş",
-    "sidebar.paginationExample": "Paginasyon Örneği",
-    "project.contributing": "Katkıda Bulunma",
-    "project.documentation": "Belgeler",
-    "project.github": "GitHub",
-    "error.field.required": "Bu alan gereklidir",
-    "error.field.email": "Geçersiz e-posta adresi",
-    "error.field": "Geçersiz değer",
-    "error.field.min": "Değer {0} veya daha büyük olmalıdır",
-    "error.field.max": "Değer {0} veya daha küçük olmalıdır",
-    "error.invalid.password": "Şifre geçersizdir, şunları içermelidir: [Sayı/Karakter (Büyük+Küçük)/?@",
-    "testWebSocket.stream": "Video Stream",
-    "testWebSocket.stopStream": "Stop"
+  "dir": "ltr",
+  "example.params": "Adım {name}, yaşım {age}",
+  "example.path": "Yerelleştirme için example.path'in test yolu",
+  "example.tstring": "i18n için TString nesnelerinin testi",
+  "logo": "WebApp",
+  "logo.title": "WebApp",
+  "pages.title": "Başlık",
+  "welcome.message": "Hoş geldiniz",
+  "features.title": "WebApp Özellikleri",
+  "features.description": "WebApp, Dart dilini kullanarak güçlü bir web uygulaması oluşturmak için ihtiyaç duyduğunuz her şeyi en basit şekilde sunar. Bu araç, hızlı, hafif ve sağlam bir web uygulaması oluşturmak için bir dizi özellik içerir. İşte sunduğu bazı özellikler:",
+  "features.websocket": "WebSocket",
+  "features.mongodb": "MongoDB",
+  "features.cronjobs": "Cron Görevleri",
+  "features.routing": "Yönlendirme",
+  "features.formvalidators": "Form doğrulayıcıları",
+  "features.htmltools": "Hızlı HTML sayfası geliştirme araçları",
+  "features.dbmodel": "Veritabanı modeli oluşturma",
+  "features.fastapi": "OpenAPI belgeleri ile hızlı API geliştirme",
+  "features.other": "Ve diğer birçok özellik, bunları örneklerde keşfedeceğiz.",
+  "login.success": "Giriş başarılı",
+  "auth.test": "Kimlik Doğrulama Testi",
+  "auth.welcome": "Hoş geldiniz,",
+  "auth.logout": "Çıkış",
+  "auth.routeExample": "Kimlik doğrulaması gerektiren bir rota örneği",
+  "auth.logoutRoute": "Çıkış rotası örneği",
+  "cookies.test": "Çerez Testi",
+  "cookies.key": "Anahtar",
+  "cookies.value": "Değer",
+  "cookies.action": "Eylem",
+  "cookies.placeholder.name": "Çerez adı",
+  "cookies.placeholder.value": "Çerez değeri",
+  "cookies.safe": "Güvenli",
+  "cookies.add": "Ekle",
+  "cookies.remove": "Çerezi kaldır",
+  "cookies.addCookie": "Çerez ekle",
+  "auth.view": "Görüntüle",
+  "auth.controller": "Kontrolör",
+  "auth.authController": "Kimlik Doğrulama Kontrolörü",
+  "auth.router": "Yönlendirici",
+  "email.test": "E-posta Testi",
+  "email.from": "Kimden",
+  "email.fromName": "Adınız",
+  "email.to": "Kime",
+  "email.subject": "Konu",
+  "email.message": "Mesaj",
+  "email.host": "Host",
+  "email.port": "Port",
+  "email.username": "Kullanıcı adı",
+  "email.password": "Şifre",
+  "email.allowInsecure": "Güvensiz bağlantıya izin ver",
+  "email.ssl": "SSL",
+  "email.success": "E-posta başarıyla gönderildi!",
+  "email.failed": "E-posta gönderilemedi.",
+  "email.send": "E-posta Gönder",
+  "email.placeholder.name": "Adınızı girin",
+  "email.placeholder.to": "Alıcının e-posta adresini girin",
+  "email.placeholder.subject": "Konu girin",
+  "email.placeholder.message": "Mesaj girin",
+  "email.placeholder.host": "Host adını girin",
+  "email.placeholder.port": "Port numarasını girin",
+  "email.placeholder.username": "Kullanıcı adını girin",
+  "email.placeholder.password": "Şifreyi girin",
+  "form.validation.title": "Form doğrulama testi",
+  "form.validation.credentials.email": "E-posta",
+  "form.validation.credentials.password": "Şifre",
+  "form.validation.email": "E-posta adresi",
+  "form.validation.emailPlaceholder": "E-posta adresinizi girin",
+  "form.validation.password": "Şifre",
+  "form.validation.passwordPlaceholder": "Şifrenizi girin",
+  "form.validation.login": "Giriş",
+  "form.validation.loginError": "Giriş hatası",
+  "form.validation.loginSuccess": "Giriş başarılı! Hoş geldiniz",
+  "form.validation.logout": "Çıkış",
+  "form.validation.view": "Görüntüle",
+  "form.validation.controller": "Kontrolör",
+  "i18n.title": "Dil Testi (i18n)",
+  "i18n.language.english": "İngilizce",
+  "i18n.language.persian": "Farsça",
+  "i18n.language.dutch": "Hollandaca",
+  "i18n.exampleTString": "Örnek TString",
+  "i18n.examplePath": "Örnek Yol",
+  "i18n.examplePathString": "Örnek Yol Dizesi",
+  "i18n.exampleParams": "Merhaba, benim adım {name} ve ben {age} yaşındayım.",
+  "i18n.view": "Görüntüle",
+  "i18n.controller": "Kontrolör",
+  "i18n.languagesDirectory": "Diller dizini",
+  "webappInfo.title": "WebApp Bilgisi",
+  "webappInfo.key": "{key}",
+  "webappInfo.info": "{info}",
+  "webappInfo.details": "{details}",
+  "webRouteExample.title": "Web Yolu örneği",
+  "webRouteExample.path": "Yol",
+  "webRouteExample.type": "Tip",
+  "webRouteExample.permissions": "İzinler",
+  "webRouteExample.auth": "Kimlik Doğrulama",
+  "webRouteExample.controller": "Kontrolör",
+  "webRouteExample.router": "Yönlendirici",
+  "testWebSocket.title": "WebSocket Testi",
+  "testWebSocket.output": "Çıktı",
+  "testWebSocket.getTime": "Zamanı Al",
+  "testWebSocket.randomMessage": "Rastgele mesaj",
+  "testWebSocket.clientLists": "Müşteri listeleri",
+  "testWebSocket.clear": "Temizle",
+  "navbar.toggleSidebar": "Yan Çubuğu Aç/Kapa",
+  "navbar.toggleNavigation": "Navigasyonu Aç/Kapa",
+  "languages.english": "İngilizce",
+  "languages.persian": "Farsça",
+  "languages.dutch": "Hollandaca",
+  "sidebar.home": "Ana Sayfa",
+  "sidebar.info": "Bilgi",
+  "sidebar.formExample": "Form Örneği",
+  "sidebar.cookieExample": "Çerez Örneği",
+  "sidebar.routeExample": "Rota Örneği",
+  "sidebar.socketExample": "Web Socket Örneği",
+  "sidebar.emailExample": "E-posta Örneği",
+  "sidebar.authExample": "Kimlik Doğrulama Örneği",
+  "sidebar.languageExample": "Dil (i18n) Örneği",
+  "sidebar.debugExample": "Hata Ayıklama Örneği",
+  "sidebar.errorExample": "Hata",
+  "sidebar.dumpExample": "Değişkenleri Yazdır",
+  "sidebar.monogdbExample": "MongoDB Örneği",
+  "database.test.title": "Veritabanı Testi (MongoDB)",
+  "database.table.header.title": "Başlık",
+  "database.table.header.slug": "Slug",
+  "database.table.header.action": "Eylem",
+  "database.table.input.placeholder.title": "Başlık girin",
+  "database.table.button.add": "Ekle",
+  "pagination.showing": "Gösteriliyor",
+  "pagination.to": "e",
+  "pagination.of": "nın",
+  "pagination.entries": "giriş",
+  "sidebar.paginationExample": "Paginasyon Örneği",
+  "project.contributing": "Katkıda Bulunma",
+  "project.documentation": "Belgeler",
+  "project.github": "GitHub",
+  "error.field.required": "Bu alan gereklidir",
+  "error.field.email": "Geçersiz e-posta adresi",
+  "error.field": "Geçersiz değer",
+  "error.field.min": "Değer {0} veya daha büyük olmalıdır",
+  "error.field.max": "Değer {0} veya daha küçük olmalıdır",
+  "error.invalid.password": "Şifre geçersizdir, şunları içermelidir: [Sayı/Karakter (Büyük+Küçük)/?@",
+  "example.params.dynamic": "A = {0}, B = {1}, C = {2}, D = {3}",
+  "testWebSocket.stream": "Video Stream",
+  "testWebSocket.stopStream": "Stop",
+  "error.field.relation": "Bu alanın değeri geçersiz",
+  "project.pubdev": "Pub.dev",
+  "mysql.example.title": "MySQL Örneği",
+  "mysql.table.header.id": "ID",
+  "mysql.table.header.title": "Başlık",
+  "mysql.table.header.author": "Yazar",
+  "mysql.table.header.publishedDate": "Yayın Tarihi",
+  "mysql.table.header.categoryId": "Kategori ID",
+  "mysql.table.header.actions": "İşlemler",
+  "mysql.table.header.booksCount": "Kitap Sayısı",
+  "mysql.placeholder.id": "ID",
+  "mysql.placeholder.title": "Başlık",
+  "mysql.placeholder.author": "Yazar",
+  "mysql.placeholder.publishedDate": "Yayın Tarihi",
+  "mysql.filter.allCategories": "Tüm Kategoriler",
+  "mysql.button.deleteSelected": "Seçilenleri Sil",
+  "mysql.button.update": "Güncelle",
+  "mysql.button.reset": "Sıfırla",
+  "mysql.button.filter": "Filtrele",
+  "mysql.button.delete": "Sil",
+  "mysql.button.edit": "Düzenle",
+  "mysql.message.deleteSelectedBooks": "Seçili kitapları silmek istediğinizden emin misiniz?",
+  "mysql.message.noBooksSelected": "Silmek için seçili kitap yok.",
+  "mysql.message.deleteBook": "Bu kitabı silmek istediğinizden emin misiniz?",
+  "mysql.message.deleteCategory": "Bu kategoriyi silmek istediğinizden emin misiniz?",
+  "mysql.message.noRecords": "Kayıt bulunamadı",
+  "mysql.message.noCategories": "Kategori bulunamadı",
+  "mysql.categories.title": "MySQL Kategorileri Örneği",
+  "sidebar.mongo": "MongoDB Örneği",
+  "person.example.title": "Kişi Örneği",
+  "person.table.header.name": "İsim",
+  "person.table.header.age": "Yaş",
+  "person.table.header.married": "Evli",
+  "person.table.header.email": "E-posta",
+  "person.table.header.height": "Boy",
+  "person.table.header.birthday": "Doğum Günü",
+  "person.table.header.job": "İş",
+  "person.table.header.skills": "Beceriler",
+  "person.table.header.action": "İşlem",
+  "person.table.empty": "Kişi bulunamadı.",
+  "database.table.empty": "Kayıt bulunamadı",
+  "person.form.label.name": "İsim",
+  "person.form.placeholder.name": "İsminizi girin",
+  "person.form.label.email": "E-posta",
+  "person.form.placeholder.email": "E-postanızı girin",
+  "person.form.label.age": "Yaş",
+  "person.form.placeholder.age": "Yaşınızı girin",
+  "person.form.label.birthday": "Doğum Günü",
+  "person.form.label.height": "Boy",
+  "person.form.placeholder.height": "Boyunuzu girin",
+  "person.form.label.job_title": "İş Başlığı",
+  "person.form.option.select_job": "İş seçin",
+  "person.form.label.skills": "Beceriler",
+  "person.form.label.password": "Şifre",
+  "person.form.placeholder.password": "Şifre girin",
+  "person.form.label.gender": "Cinsiyet",
+  "person.form.gender.dont_ask": "Sorma!",
+  "person.form.gender.male": "Erkek",
+  "person.form.gender.female": "Kadın",
+  "person.form.gender.other": "Diğer",
+  "person.form.label.married": "Evli",
+  "person.form.married.yes": "Evet",
+  "person.form.married.no": "Hayır",
+  "person.form.label.color": "Renk",
+  "person.form.tooltip.color": "Renginizi seçin",
+  "person.form.button.submit": "Gönder",
+  "person.form.button.cancel": "İptal"
 }
